support/сменить brand на blue

--- a/src/pug/article__item_video.pug
+++ b/src/pug/article__item_video.pug
@@ -20,7 +20,7 @@ block articles__section
             span(itemprop="name") Как самостоятельно заменить тормозную жидкость
             meta(itemprop="position" content="3")
       section.content
-        .color-theme-brand
+        .color-theme-blue
           h1(itemprop="name") Обзор на летние шины Pirelli P Zero от ДонШина
         .date.mb-2 30 ноября 2021
       .section__video
@@ -31,14 +31,14 @@ block articles__section
           .col-xl-8.col-lg-10.d-flex.flex-column.flex-sm-row.align-items-start.align-items-sm-center.justify-content-sm-between.px-lg-0.px-md-5.px-4
             nav.social.d-flex.align-items-center.mb-4.mb-sm-0
               .social__title.mr-2 Поделиться:
-              a.social__item.h2.color-theme-brand.mr-2(href="#")
+              a.social__item.h2.color-theme-blue.mr-2(href="#")
                 +icon('vk')
-              a.social__item.h2.color-theme-brand.mr-2(href="#")
+              a.social__item.h2.color-theme-blue.mr-2(href="#")
                 +icon('instagram')
-              a.social__item.h2.color-theme-brand.mr-2(href="#")
+              a.social__item.h2.color-theme-blue.mr-2(href="#")
                 +icon('youtube')
-              a.social__item.h2.color-theme-brand.mr-0(href="#")
+              a.social__item.h2.color-theme-blue.mr-0(href="#")
                 +icon('facebook')
             a.readmore.d-flex.align-items-center(href="#")
               span.h5.mr-2 Смотреть на нашем канале
-              +icon('readmore-right','h3 color-theme-brand')
+              +icon('readmore-right','h3 color-theme-blue')
