--- a/src/pug/articles__row.pug
+++ b/src/pug/articles__row.pug
@@ -49,9 +49,9 @@ block wrapper
               .media__intro.h5(itemprop="description")!= articles__item.intro
               span.d-none(itemprop="author") ДонШина Ростов
     .section.d-flex.justify-content-center.py-3.mb-5
-      a.readmore.d-flex.align-items-center.color-theme-brand(href="#")
+      a.readmore.d-flex.align-items-center.color-theme-blue(href="#")
         span.h4.mr-2 Показать еще
-        +icon('readmore','h3 color-theme-brand')
+        +icon('readmore','h3 color-theme-blue')
 
     .mb-3
       .h2.font-weight-bold.mb-4 Рекомендуем:
