--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -22,7 +22,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
     block wrapper
 
     block footer
-        footer.footer.h6.color-theme-white.bg-theme-brand(itemscope itemtype="http://schema.org/WPFooter")
+        footer.footer.h6.color-theme-white.bg-theme-blue(itemscope itemtype="http://schema.org/WPFooter")
             meta(itemprop="copyrightYear" content="2022")
             meta(itemprop="copyrightHolder" content="ДонШина Ростов")
             .wrapper.d-flex.flex-wrap
@@ -132,9 +132,9 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
           .modal-content.border-0.box-shadow.py-3
             .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
               .d-flex.align-items-center
-                +icon('user','color-theme-brand h3 mr-2')
-                .h3.font-weight-bold.color-theme-brand.mr-3 Регистрация
-              button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+                +icon('user','color-theme-blue h3 mr-2')
+                .h3.font-weight-bold.color-theme-blue.mr-3 Регистрация
+              button.close.h2.button-unstyled.color-theme-blue.py-0(data-dismiss="modal")
                 +icon('close')
             .modal-body.border-bottom.pt-0.px-4.pb-3.mb-3
               .form
@@ -170,9 +170,9 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
           .modal-content.border-0.box-shadow.py-3
             .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
               .d-flex.align-items-center
-                +icon('user','color-theme-brand h3 mr-2')
-                .h3.font-weight-bold.color-theme-brand.mr-3 Войдите или зарегистрируйтесь
-              button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+                +icon('user','color-theme-blue h3 mr-2')
+                .h3.font-weight-bold.color-theme-blue.mr-3 Войдите или зарегистрируйтесь
+              button.close.h2.button-unstyled.color-theme-blue.py-0(data-dismiss="modal")
                 +icon('close')
             .modal-body.border-bottom.pt-0.px-4.pb-2.mb-3
               .form.mb-4
@@ -189,9 +189,9 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
           .modal-content.border-0.box-shadow.py-3
             .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
               .d-flex.align-items-center
-                +icon('user','color-theme-brand h3 mr-2')
-                .h3.font-weight-bold.color-theme-brand.mr-3 Войдите по почте
-              button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+                +icon('user','color-theme-blue h3 mr-2')
+                .h3.font-weight-bold.color-theme-blue.mr-3 Войдите по почте
+              button.close.h2.button-unstyled.color-theme-blue.py-0(data-dismiss="modal")
                 +icon('close')
             .modal-body.border-bottom.pt-0.px-4.pb-2.mb-3
               .form.mb-4
@@ -208,9 +208,9 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
           .modal-content.border-0.box-shadow.py-3
             .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
               .d-flex.align-items-center
-                +icon('user','color-theme-brand h3 mr-2')
-                .h3.font-weight-bold.color-theme-brand.mr-3 Забыли пароль?
-              button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+                +icon('user','color-theme-blue h3 mr-2')
+                .h3.font-weight-bold.color-theme-blue.mr-3 Забыли пароль?
+              button.close.h2.button-unstyled.color-theme-blue.py-0(data-dismiss="modal")
                 +icon('close')
             .modal-body.border-bottom.pt-0.px-4.pb-2.mb-3
               .h5.text-center.mb-3 Укажите ваш телефон, и мы отправим&nbsp;
