--- a/src/pug/base/callorder.pug
+++ b/src/pug/base/callorder.pug
@@ -1,6 +1,6 @@
 .section.text-center.mb-5
   .px-lg-5.px-md-4.px-3
-    .h2.font-weight-bold.color-theme-brand.mb-4 Оставьте заявку и наши менеджеры свяжутся с вами в
+    .h2.font-weight-bold.color-theme-blue.mb-4 Оставьте заявку и наши менеджеры свяжутся с вами в
       br
       | ближайшее время
     .row
@@ -10,4 +10,4 @@
           label.form__label.form__label_title +7 (_ _ _) _ _ _-_ _-_ _
         button.button.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
         .h6 Нажимая “Подписаться” вы принимаете условия&nbsp;
-          a.color-theme-brand(href="#") Политики конфиденциальности
+          a.color-theme-blue(href="#") Политики конфиденциальности
