--- a/src/pug/base/category-details.pug
+++ b/src/pug/base/category-details.pug
@@ -2,7 +2,7 @@
   .aside__wrapper
     form.form.form_bg.form_filter.mb-lg-3(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
-        .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-brand
+        .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-blue
           +icon('detail','form__title-icon h3 mr-1')
           span.mr-2 Автотовары
       .category-menu
