--- a/src/pug/base/row.pug
+++ b/src/pug/base/row.pug
@@ -1,6 +1,6 @@
 form.table-row__col.table-row__col_category.box-shadow.border-radius.p-3(action="#")
   .bubble.d-md-none.mb-3.mb-md-0
-    +icon('photo','h2 color-theme-brand mr-2')
+    +icon('photo','h2 color-theme-blue mr-2')
     .bubble__picture.box-shadow.border.border-radius
       +img('content/cards/pirelli.jpg','img-cover border-radius zi-2')
   .table__col.table__col_width.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-md-center.mb-3.mb-md-0
@@ -21,7 +21,7 @@ form.table-row__col.table-row__col_category.box-shadow.border-radius.p-3(action=
     .table__col-title.h5.mr-2.d-md-none Наличие:
     | много
   .table__col.table__col_btn.d-flex.align-items-center
-    .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+    .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
       input.recalculate__field.d-none(type="number" name="count" value="4")
       button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
       .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
