--- a/src/pug/base/subscribe.pug
+++ b/src/pug/base/subscribe.pug
@@ -1,6 +1,6 @@
 .section.text-center.mb-5
   .px-lg-5.px-md-4.px-3
-    .h2.font-weight-bold.color-theme-brand.mb-3 Узнайте о выгоде первым
+    .h2.font-weight-bold.color-theme-blue.mb-3 Узнайте о выгоде первым
     .h4.mb-4 Подписывайтесь и получайте новости о скидках и акциях на свою почту.
     .row
       form.form.col-xl-4.offset-xl-4.col-md-6.offset-md-3.col-sm-8.offset-sm-2(action="#")
@@ -9,4 +9,4 @@
           label.form__label.form__label_title e-mail
         button.button.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
         .h6 Нажимая “Подписаться” вы принимаете условия&nbsp;
-          a.color-theme-brand(href="#") Политики конфиденциальности
+          a.color-theme-blue(href="#") Политики конфиденциальности
