--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -18,9 +18,9 @@ block wrapper
       .d-flex.align-items-center.justify-content-between.mb-4
         .d-flex.align-items-center
           h1.mr-4.mb-0 #{title}
-          span.h5.text-nowrap.rounded-pill.color-theme-white.bg-theme-brand.px-2 3 шт.
+          span.h5.text-nowrap.rounded-pill.color-theme-white.bg-theme-blue.px-2 3 шт.
         a.button.button_nobg.h4.d-none.d-md-flex.p-0(href="#")
-          +icon('share','h3 color-theme-brand mr-2')
+          +icon('share','h3 color-theme-blue mr-2')
           span.h5 Рассказать друзьям
     .heading.heading_cart.px-3
       .heading__col.heading__col_cart-title.h6.mb-2 Товар
@@ -42,16 +42,16 @@ block wrapper
           +icon('close-noborder', 'h4 color-theme-disabled mr-3')
           .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white.zi-2
             input.recalculate__field.d-none(type="number" name="count" value="1")
-            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
-            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
-            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-blue.flex-grow-1.recalculate__btn_remove(type="button") -
+            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-blue 1
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-blue.flex-grow-1.recalculate__btn_add(type="button") +
       .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-3 Сумма:
         span.d-flex.h3
           span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
           | ₽
       .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-        button.h2.button-unstyled.color-theme-brand.zi-2(type="button")
+        button.h2.button-unstyled.color-theme-blue.zi-2(type="button")
           +icon('close')
     form.table-row.table-row_cart.box-shadow.border-radius.pos-rel.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
       .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
@@ -68,16 +68,16 @@ block wrapper
           +icon('close-noborder', 'h4 color-theme-disabled mr-3')
           .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white.zi-2
             input.recalculate__field.d-none(type="number" name="count" value="1")
-            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
-            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
-            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-blue.flex-grow-1.recalculate__btn_remove(type="button") -
+            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-blue 1
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-blue.flex-grow-1.recalculate__btn_add(type="button") +
       .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-3 Сумма:
         span.d-flex.h3
           span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
           | ₽
       .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-        button.h2.button-unstyled.color-theme-brand.zi-2(type="button")
+        button.h2.button-unstyled.color-theme-blue.zi-2(type="button")
           +icon('close')
     form.table-row.table-row_cart.box-shadow.border-radius.pos-rel.py-3.py-md-1.px-3.mb-4.js-cart(action="#")
       .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
@@ -94,16 +94,16 @@ block wrapper
           +icon('close-noborder', 'h4 color-theme-disabled mr-3')
           .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white.zi-2
             input.recalculate__field.d-none(type="number" name="count" value="1")
-            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
-            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
-            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-blue.flex-grow-1.recalculate__btn_remove(type="button") -
+            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-blue 1
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-blue.flex-grow-1.recalculate__btn_add(type="button") +
       .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-3 Сумма:
         span.d-flex.h3
           span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
           | ₽
       .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-        button.h2.button-unstyled.color-theme-brand.zi-2(type="button")
+        button.h2.button-unstyled.color-theme-blue.zi-2(type="button")
           +icon('close')
     form.form.row.mb-5(action="#")
       .col-xl-8.col-md-6.d-flex.flex-wrap.align-items-start.px-0
@@ -146,7 +146,7 @@ block wrapper
       .d-block.d-md-none
         .text-center.mb-2
           a.button.button_nobg.h4.p-0(href="#")
-            +icon('continue', 'h3 color-theme-brand mr-2')
+            +icon('continue', 'h3 color-theme-blue mr-2')
             span.h5 Продолжить покупки
         .h6 Зарегистрировавшись на сайте всего один раз вам будет доступна история заказов, повтор заказов, накопительные скидки. &gt;
 
