--- a/src/pug/category-wheels.pug
+++ b/src/pug/category-wheels.pug
@@ -44,4 +44,4 @@ block wrapper
         include base/content.pug
         .content__footer
           button.readmore.readmore_btn(type="button")
-            +icon('readmore','h2 color-theme-brand')
+            +icon('readmore','h2 color-theme-blue')
