--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -41,9 +41,9 @@ block wrapper
           .section.section_filter.bg-theme-white.py-0.mb-lg-3
             .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
               button.button.button_nobg.h4.p-0(type="button")
-                +icon('settings','color-theme-brand h3 mr-2')
-                span.color-theme-brand Подобрать по VIN
-              span.section__readmore.readmore.d-none.d-lg-block.color-theme-brand
+                +icon('settings','color-theme-blue h3 mr-2')
+                span.color-theme-blue Подобрать по VIN
+              span.section__readmore.readmore.d-none.d-lg-block.color-theme-blue
                 +icon('readmore','h3')
             form.section__body.section__body_visible(action="#")
               .form.border-bottom.px-md-4.px-3.pt-md-4.pt-3
@@ -90,18 +90,18 @@ block wrapper
             .h6.color-theme-disabled.mb-3 8 товаров
           .d-flex.flex-column.flex-grow-1
             .product-list__body
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Антенны автомобильные
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Бегунки, Втулки и щетки стартера
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Бендиксы
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Комплектующие (запчасти) генераторов
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Регуляторы
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Датчики и предохранители
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Антенны автомобильные
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Бегунки, Втулки и щетки стартера
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Бендиксы
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Комплектующие (запчасти) генераторов
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Регуляторы
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Датчики и предохранители
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Антенны автомобильные
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Бегунки, Втулки и щетки стартера
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Бендиксы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Комплектующие (запчасти) генераторов
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Регуляторы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Датчики и предохранители
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Антенны автомобильные
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Бегунки, Втулки и щетки стартера
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Бендиксы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Комплектующие (запчасти) генераторов
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Регуляторы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Датчики и предохранители
             .product-list__footer.text-center
               button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
@@ -146,7 +146,7 @@ block wrapper
             .h6.color-theme-disabled.mb-3 8 товаров
           .d-flex.flex-column.flex-grow-1
             .product-list__body
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Видеорегистраторы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Видеорегистраторы
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme NETTON, 2 камеры
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme TIO S, GPS
               a.d-block.h6.mb-2(href="#") Видеорегистратор с радар-детектором Playme ALPHA
@@ -212,7 +212,7 @@ block wrapper
             .h6.color-theme-disabled.mb-3 8 товаров
           .d-flex.flex-column.flex-grow-1
             .product-list__body
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Видеорегистраторы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Видеорегистраторы
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme NETTON, 2 камеры
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme TIO S, GPS
               a.d-block.h6.mb-2(href="#") Видеорегистратор с радар-детектором Playme ALPHA
@@ -229,12 +229,12 @@ block wrapper
             .h6.color-theme-disabled.mb-3 8 товаров
           .d-flex.flex-column.flex-grow-1
             .product-list__body
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Антенны автомобильные
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Бегунки, Втулки и щетки стартера
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Бендиксы
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Комплектующие (запчасти) генераторов
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Регуляторы
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Датчики и предохранители
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Антенны автомобильные
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Бегунки, Втулки и щетки стартера
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Бендиксы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Комплектующие (запчасти) генераторов
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Регуляторы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Датчики и предохранители
             .product-list__footer.text-center
               button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
@@ -280,7 +280,7 @@ block wrapper
             .h6.color-theme-disabled.mb-3 8 товаров
           .d-flex.flex-column.flex-grow-1
             .product-list__body
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Видеорегистраторы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Видеорегистраторы
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme NETTON, 2 камеры
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme TIO S, GPS
               a.d-block.h6.mb-2(href="#") Видеорегистратор с радар-детектором Playme ALPHA
@@ -362,7 +362,7 @@ block wrapper
             .h6.color-theme-disabled.mb-3 8 товаров
           .d-flex.flex-column.flex-grow-1
             .product-list__body
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Видеорегистраторы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Видеорегистраторы
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme NETTON, 2 камеры
               a.d-block.h6.mb-2(href="#") Видеорегистратор Playme TIO S, GPS
               a.d-block.h6.mb-2(href="#") Видеорегистратор с радар-детектором Playme ALPHA
@@ -379,12 +379,12 @@ block wrapper
             .h6.color-theme-disabled.mb-3 8 товаров
           .d-flex.flex-column.flex-grow-1
             .product-list__body
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Антенны автомобильные
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Бегунки, Втулки и щетки стартера
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Бендиксы
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Комплектующие (запчасти) генераторов
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Регуляторы
-              a.d-block.h6.color-theme-brand.mb-2(href="#") Датчики и предохранители
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Антенны автомобильные
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Бегунки, Втулки и щетки стартера
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Бендиксы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Комплектующие (запчасти) генераторов
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Регуляторы
+              a.d-block.h6.color-theme-blue.mb-2(href="#") Датчики и предохранители
             .product-list__footer.text-center
               button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
@@ -401,4 +401,4 @@ block wrapper
         include base/content.pug
         .content__footer
           button.readmore.readmore_btn(type="button")
-            +icon('readmore','h2 color-theme-brand')
+            +icon('readmore','h2 color-theme-blue')
