--- a/src/pug/checkout.pug
+++ b/src/pug/checkout.pug
@@ -21,8 +21,8 @@ block wrapper
         block checkout
           form.section.py-0.mb-3(action="#")
             .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-              span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 1
-              .h3.flex-grow-1.font-weight-bold.color-theme-brand Дополнительные услуги
+              span.section-counter.h3.rounded-circle.bg-theme-blue.color-theme-white.mr-2 1
+              .h3.flex-grow-1.font-weight-bold.color-theme-blue Дополнительные услуги
             .border-bottom.px-md-4.px-3.py-md-4.py-3
               .row.align-items-center.mb-4
                 .col-sm-5.mb-2.mb-sm-0
@@ -44,22 +44,22 @@ block wrapper
               button.button.text-uppercase.px-5(type="button") Далее
           form.section.py-0.mb-3(action="#")
             .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-              span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 2
-              .h3.flex-grow-1.font-weight-bold.color-theme-brand Покупатель
+              span.section-counter.h3.rounded-circle.bg-theme-blue.color-theme-white.mr-2 2
+              .h3.flex-grow-1.font-weight-bold.color-theme-blue Покупатель
           form.section.py-0.mb-3(action="#")
             .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-              span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 3
-              .h3.flex-grow-1.font-weight-bold.color-theme-brand Доставка
+              span.section-counter.h3.rounded-circle.bg-theme-blue.color-theme-white.mr-2 3
+              .h3.flex-grow-1.font-weight-bold.color-theme-blue Доставка
           form.section.py-0.mb-3(action="#")
             .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-              span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 4
-              .h3.flex-grow-1.font-weight-bold.color-theme-brand Оплата
+              span.section-counter.h3.rounded-circle.bg-theme-blue.color-theme-white.mr-2 4
+              .h3.flex-grow-1.font-weight-bold.color-theme-blue Оплата
       .aside.aside_pos_sticky.col-xl-3.col-lg-4.mb-lg-4
         .box-shadow.border-radius
           .border-bottom.px-md-4.px-3.py-md-4.py-3
             .d-flex.align-items-center.mb-3
               .h4.mr-3 Товары в заказе
-              .h5.text-nowrap.rounded-pill.color-theme-white.bg-theme-brand.px-2 3 шт.
+              .h5.text-nowrap.rounded-pill.color-theme-white.bg-theme-blue.px-2 3 шт.
             .row.align-items-center.pos-rel.mb-2
               .col-4
                 +img('content/cards/card-1.jpg')
@@ -113,6 +113,6 @@ block wrapper
           .desclist.px-md-4.px-3.py-3
             .d-flex.align-items-center
               .desclist__title.h6.text-oneline.px-0.col-md-6 Итого к оплате:
-              .h3.col-md-6.color-theme-brand
+              .h3.col-md-6.color-theme-blue
                 span.font-weight-bold 79 337.12&nbsp;
                 | ₽
