--- a/src/pug/filter-battery.pug
+++ b/src/pug/filter-battery.pug
@@ -32,7 +32,7 @@ block wrapper
             .aside__wrapper
               form.form.form_bg.form_filter.mb-lg-3(action="#")
                 .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
-                  .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
+                  .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-blue.mb-0.mb-lg-2
                     +icon('battery','form__title-icon h3 mr-1')
                     | #{title}
                   button.button-unstyled.h6(type="reset") Сбросить
@@ -170,8 +170,8 @@ block wrapper
                 .d-flex.justify-content-center
                   button.readmore.d-flex.align-items-center(type="submit" data-toggle="list" data-target="#brand")
                     span.h6.mr-2.pointer-events-none Показать еще
-                    +icon('readmore','h3 color-theme-brand readmore__icon')
-              .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4
+                    +icon('readmore','h3 color-theme-blue readmore__icon')
+              .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-blue.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4
                 .aside__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
                   .h5.font-weight-normal.mr-2 Найдено:
                   | 713
