--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -250,7 +250,7 @@ block wrapper
             .banner.overflow-hidden
               +img('content/banners/banner-1.jpg','img-cover')
               .banner__inner.d-flex.flex-column.align-items-center.justify-content-between.px-3.py-4
-                .banner__title.banner__title_sm.h1.text-uppercase.font-weight-bold.color-theme-brand Запись на шиномонтаж онлайн
+                .banner__title.banner__title_sm.h1.text-uppercase.font-weight-bold.color-theme-blue Запись на шиномонтаж онлайн
                 a.button.text-uppercase(href="#") Записаться
 
         .tabs.mb-5
@@ -322,7 +322,7 @@ block wrapper
               .d-flex.justify-content-center
                 a.readmore.d-flex.align-items-center(href="#")
                   span.h5.mr-2 Показать еще
-                  +icon('readmore-right','h3 color-theme-brand')
+                  +icon('readmore-right','h3 color-theme-blue')
             .tab-pane.fade(id="links-wheels" role="tabpanel" action="#")
 
         include category/popular.pug
@@ -349,7 +349,7 @@ block wrapper
               .d-flex.justify-content-center.px-lg-5.px-sm-4
                 a.readmore.d-flex.align-items-center(href="#")
                   span.h5.mr-2 Узнать больше новостей
-                  +icon('readmore-right','h3 color-theme-brand')
+                  +icon('readmore-right','h3 color-theme-blue')
           .col-lg-3.ml-lg-0.col-md-6.offset-md-3.col-sm-8.offset-sm-2
             .banner.overflow-hidden
               +img('content/banners/banner-2.jpg','img-cover')
@@ -363,11 +363,11 @@ block wrapper
             .row.flex-grow-1
               .col-xl-6.col-lg-8.col-md-6.d-flex.flex-column.justify-content-around.h-100
                 .feature.mb-5.mb-lg-4
-                  .feature__value.font-weight-bold.color-theme-brand 10
+                  .feature__value.font-weight-bold.color-theme-blue 10
                     spanh1 лет
                   .h4 на рынке продаж шин дисков и автотоваров.
                 .feature.mb-5.mb-lg-0
-                  .feature__value.font-weight-bold.color-theme-brand &gt;2000
+                  .feature__value.font-weight-bold.color-theme-blue &gt;2000
                   .h4 качественных товаров в каталоге сайта.
           .col-lg-6.offset-lg-1.px-lg-0.px-sm-4
             .content
@@ -376,4 +376,4 @@ block wrapper
             .d-flex.justify-content-center
               a.readmore.d-flex.align-items-center(href="#")
                 span.h5.mr-2 Узнать больше о компании
-                +icon('readmore-right','h3 color-theme-brand')
+                +icon('readmore-right','h3 color-theme-blue')
