--- a/src/pug/personal-auto.pug
+++ b/src/pug/personal-auto.pug
@@ -7,7 +7,7 @@ block personal
   .h2.font-weight-bold.text-center.mb-4 Мой автомобиль
   form.section.py-0.mb-3(zction="#")
     .px-md-4.px-3.py-md-4.py-3
-      .h3.font-weight-bold.color-theme-brand Подробно заполненные данные вашего автомобиля сделают работу с сайтом удобнее и быстрее. Мы сможем предлагать товары и услуги подходящие именно Вам.
+      .h3.font-weight-bold.color-theme-blue Подробно заполненные данные вашего автомобиля сделают работу с сайтом удобнее и быстрее. Мы сможем предлагать товары и услуги подходящие именно Вам.
     .border-bottom.pb-md-4.pb-4.mb-3
       .d-flex.flex-wrap.pl-md-4.pl-3.mb-xl-5.mb-4
         .col-md-3.pl-0.pr-md-4.pr-3.mb-4.pos-rel
@@ -58,10 +58,10 @@ block personal
       .row
         .d-flex.flex-wrap.col-xl-6
           a.d-flex.align-items-center.h5.text-nowrap.mr-5.mb-2.mb-xl-0(href="#")
-            +icon('tires','contacts__icon h3 color-theme-brand mr-2')
+            +icon('tires','contacts__icon h3 color-theme-blue mr-2')
             | Подборать шины
           a.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-xl-0(href="#")
-            +icon('wheels','contacts__icon h3 color-theme-brand mr-2')
+            +icon('wheels','contacts__icon h3 color-theme-blue mr-2')
             | Подборать диски
         .col-xl-6.d-sm-flex.justify-content-xl-end.text-center.text-sm-left
           button.button.text-uppercase.bg-theme-disabled.px-4(type="button" disabled) Сохранить изменения
