--- a/src/pug/personal-bonus.pug
+++ b/src/pug/personal-bonus.pug
@@ -7,11 +7,11 @@ block personal
   .h2.font-weight-bold.text-center.mb-4 #{title}
   .section.text-center.px-3.mb-5
     .d-flex.flex-wrap.justify-content-center.align-items-center.mb-4
-      .h3.font-weight-bold.color-theme-brand.mr-2 Общее количество:
+      .h3.font-weight-bold.color-theme-blue.mr-2 Общее количество:
       .h4.color-theme-white.bg-theme-success.rounded-pill.px-2.py-1 300 Б.₽.
     .row
       .h5.col-lg-8.offset-lg-2.mb-0 Бонусами рублями можно частично оплатить товары и услуги на нашем сайте при оформлении заказа. Бонусы начисляются автоматически, подробнее о правилах начисления и использования бонусов&nbsp;
-        a.color-theme-brand(href="#") можно прочитать тут&nbsp;
+        a.color-theme-blue(href="#") можно прочитать тут&nbsp;
         | или уточнить у наших менеджеров.
 
   .h2.font-weight-bold.text-center.mb-4 История операций с бонусными рублями
@@ -37,6 +37,6 @@ block personal
         span.text-right.text-md-left(class=bonusArr__item.bonusArr__classmod)!= bonusArr__item.bonusArr__value
 
   .section.text-center.py-2.mb-5
-    a.readmore.h4.d-flex.align-items-center.justify-content-center.color-theme-brand.pr-0(href="#")
+    a.readmore.h4.d-flex.align-items-center.justify-content-center.color-theme-blue.pr-0(href="#")
       span.mr-1 Показать всю историю операций
       +icon('readmore','h3')
