--- a/src/pug/personal.pug
+++ b/src/pug/personal.pug
@@ -29,7 +29,7 @@ block wrapper
       #leftmenu.aside.aside_pos_fixed.aside_pos_sticky.col-xl-3.col-lg-4.mb-lg-4
         .aside__wrapper
           nav.leftmenu
-            - var leftmenu = [{title: 'Мои заказы', icon: 'case', badge: 'bg-theme-brand', badge__text: '2'}, {title: 'Избранное', icon: 'favourite', badge: 'bg-theme-success', badge__text: '3'}, {title: 'Бонусные рубли', icon: 'gift', badge: 'bg-theme-success', badge__text: '300', badge__extratext: true}, {title: 'Запись на услуги', icon: 'services'},{title: 'Подбор по VIN', icon: 'settings', badge: 'bg-theme-success', badge__text: '1'}, {title: 'Персональные данные', icon: 'user'},{title: 'Мой автомобиль', icon: 'car'}, {title: 'Смена пароля', icon: 'shield'},{title: 'Выход', icon: 'exit'}]
+            - var leftmenu = [{title: 'Мои заказы', icon: 'case', badge: 'bg-theme-blue', badge__text: '2'}, {title: 'Избранное', icon: 'favourite', badge: 'bg-theme-success', badge__text: '3'}, {title: 'Бонусные рубли', icon: 'gift', badge: 'bg-theme-success', badge__text: '300', badge__extratext: true}, {title: 'Запись на услуги', icon: 'services'},{title: 'Подбор по VIN', icon: 'settings', badge: 'bg-theme-success', badge__text: '1'}, {title: 'Персональные данные', icon: 'user'},{title: 'Мой автомобиль', icon: 'car'}, {title: 'Смена пароля', icon: 'shield'},{title: 'Выход', icon: 'exit'}]
             each leftmenu__item in leftmenu
               +leftmenu(leftmenu__item.title, leftmenu__item.icon, leftmenu__item.badge, leftmenu__item.badge__text, leftmenu__item.badge__extratext)
 
