--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -34,7 +34,7 @@ block wrapper
           +img('content/cards/pirelli.jpg')
           span.label.label_hit.label_pos_abs.text-uppercase.px-2 Хит
           span.zoom
-            +icon('zoom','h4 color-theme-brand')
+            +icon('zoom','h4 color-theme-blue')
         a.d-flex.align-items-center.justify-content-around.box-shadow.border-radius.p-3.mb-2(href="#" itemscope itemtype="http://schema.org/Brand")
           img(class="img-fluid" src="/img/content/logo/logo-4.jpg" alt="" title="" itemprop="logo")
           span.h5(itemprop="name") Bridgestone
@@ -60,11 +60,11 @@ block wrapper
                     span.h2.font-weight-bold.text-nowrap.mr-1 7 337.12
                     span.h3 ₽
                     .notify
-                      +icon('notify','notify__icon h3 color-theme-brand')
+                      +icon('notify','notify__icon h3 color-theme-blue')
                       .notify__desc.h6.d-none На сайте цена указана при покупке за 4 шт. Точную цену скажет менеджер при подтверждении заказа.
                   .cart-summary__invisible.text-center.flex-grow-1
                     +icon('close-noborder','h4 color-theme-disabled')
-                .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+                .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
                   input.recalculate__field.d-none(type="number" name="count" value="4")
                   button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
                   .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -72,34 +72,34 @@ block wrapper
               button.button.text-uppercase.px-3.mr-sm-4(type="submit") В корзину
             .col-xl-3.col-md-4.col-sm-6.text-center.text-sm-left
               button.button.button_nobg.h5.p-0(type="button")
-                +icon('plane','h3 color-theme-brand mr-2')
+                +icon('plane','h3 color-theme-blue mr-2')
                 | Купить в один клик
             .col-xl-3.col-md-4.col-sm-6.text-center.text-sm-left
               button.button.button_nobg.h5.p-0(type="button")
-                +icon('card','h3 color-theme-brand mr-2')
+                +icon('card','h3 color-theme-blue mr-2')
                 | В кредит
           .row
             .col-xl-3.col-md-5.col-sm-6.mb-2.mb-sm-0
               span.h6.mr-1 Доставка в ваш город:
-              span.h5.color-theme-brand от 350 ₽
+              span.h5.color-theme-blue от 350 ₽
             .col-xl-3.col-md-5.col-sm-6.mb-2.mb-sm-0
               span.h6.mr-1 Отгрузка:
-              span.h5.color-theme-brand сегодня после 15
+              span.h5.color-theme-blue сегодня после 15
             .col-xl-3.col-md-5.col-sm-6.mb-2.mb-sm-0
               span.h6.mr-1 В наличии:
-              span.h5.color-theme-brand 8 шт.
+              span.h5.color-theme-blue 8 шт.
             .col-xl-3.col-md-5.col-sm-6.mb-2.mb-sm-0
               span.h6.mr-1 Отзывы:
-              span.h5.color-theme-brand 2 шт.
+              span.h5.color-theme-blue 2 шт.
         .box-shadow.border-radius.p-md-4.p-3
           .d-flex.flex-sm-wrap.flex-column.flex-sm-row.align-items-center.mb-sm-2
-            .d-flex.align-items-center.color-theme-brand.bg-theme-light.rounded-pill.py-1.px-2.mb-3.mb-sm-2.mr-sm-2
+            .d-flex.align-items-center.color-theme-blue.bg-theme-light.rounded-pill.py-1.px-2.mb-3.mb-sm-2.mr-sm-2
               +icon('car','h4 mr-2')
               span.h5 Подходит для вашего авто
             .d-flex.align-items-center.color-theme-white.bg-theme-success.rounded-pill.py-1.px-2.mb-3.mb-sm-2.mr-sm-2
               +icon('repair','h4 mr-2')
               span.h5 Бесплатный шиномотаж
-            .d-flex.align-items-center.color-theme-white.bg-theme-brand.rounded-pill.py-1.px-2.mb-3.mb-sm-2.mr-sm-2
+            .d-flex.align-items-center.color-theme-white.bg-theme-blue.rounded-pill.py-1.px-2.mb-3.mb-sm-2.mr-sm-2
               +icon('delivery','h4 mr-2')
               span.h5 Бесплатная доставка
           .row
@@ -116,24 +116,24 @@ block wrapper
                   .h5.bg-theme-white.py-1.pl-1.zi-2 60 мм
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Диаметр
-                  .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 17″
+                  .h5.bg-theme-white.color-theme-blue.py-1.pl-2.zi-2 17″
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Сезон
-                  .h5.d-flex.align-items-center.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2
+                  .h5.d-flex.align-items-center.bg-theme-white.color-theme-blue.py-1.pl-2.zi-2
                     +icon('summer','h5 mr-1')
                     | Лето
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Производитель
-                  .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 PIRELLI
+                  .h5.bg-theme-white.color-theme-blue.py-1.pl-2.zi-2 PIRELLI
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Модель
-                  .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 P-ZERO
+                  .h5.bg-theme-white.color-theme-blue.py-1.pl-2.zi-2 P-ZERO
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Типоразмер
-                  .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 235/60R17
+                  .h5.bg-theme-white.color-theme-blue.py-1.pl-2.zi-2 235/60R17
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Тип
-                  .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 Легковые
+                  .h5.bg-theme-white.color-theme-blue.py-1.pl-2.zi-2 Легковые
                 .desclist__border.d-flex.align-items-center.justify-content-between
                   .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Индекс нагрузки
                   .h5.bg-theme-white.py-1.pl-1.zi-2 102 (850 кг)
@@ -144,13 +144,13 @@ block wrapper
                 p Остатки товара на складе меняются, о точном наличии товара и ценах уточняйте у менеджера.
               .d-flex.flex-sm-wrap.flex-column.flex-sm-row.align-items-center.justify-content-between
                 button.button.button_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
-                  +icon('share','h3 color-theme-brand mr-2')
+                  +icon('share','h3 color-theme-blue mr-2')
                   | Рассказать друзьям
                 button.button.button_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
-                  +icon('compare','h3 color-theme-brand mr-2')
+                  +icon('compare','h3 color-theme-blue mr-2')
                   | Сравнить
                 button.button.button_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
-                  +icon('favourite','h3 color-theme-brand mr-2')
+                  +icon('favourite','h3 color-theme-blue mr-2')
                   | В избранное
     .tabs.mb-5
       ul.nav.nav-tabs.d-flex.align-items-center.p-0.m-0(role="tablist")
@@ -183,11 +183,11 @@ block wrapper
                 iframe.embed-responsive-item(src="https://www.youtube.com/embed/_4rN_sP9DHU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
               .d-flex.flex-sm-wrap.flex-column.flex-sm-row.align-items-center.justify-content-between
                 button.button.button_nobg.h5.p-0(type="button")
-                  +icon('share','h3 color-theme-brand mr-2')
+                  +icon('share','h3 color-theme-blue mr-2')
                   | Рассказать друзьям
                 a.readmore.d-flex.align-items-center(href="#")
                   span.h5.mr-2 Смотреть на нашем канале
-                  +icon('readmore-right','h3 color-theme-brand')
+                  +icon('readmore-right','h3 color-theme-blue')
         .tab-pane.fade.show.px-lg-3(id="pos-desc" role="tabpanel" itemprop="description")
           .content
             p Цена указана при покупке от 4 шт. за наличный расчет. Минимальный заказ 4 шт., меньшее количество можно приобрести только по согласованию с менеджером и 100% предоплате.
@@ -196,31 +196,31 @@ block wrapper
             .col-xl-10.offset-xl-1
               .d-flex.flex-wrap.align-items-start.border-bottom.pb-4.mb-4
                 .col-md-3.d-flex.align-items-center.mb-3
-                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.p-3.mr-3
+                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.p-3.mr-3
                     +icon('user')
                   .text-left
-                    .h4.color-theme-brand.mb-3 Дмитрий Леухин
+                    .h4.color-theme-blue.mb-3 Дмитрий Леухин
                     .h6 6 июня 2021
                 .col-md-9.h5 Сразу после первого выезда восхитился! Сцепление выше всяких похвал, руль стал крутиться чуть жестче и четче, по мягкости средние (то что надо).Тот же LATITUDE SPORT 3 стоит дороже а по параметрам хуже. Отличные шины. Много сомневался так как в отзывах писали что сильно шумят, но по факту НЕТ. Нет никакого шума. Может если на "ведро" ставить можно что то услышать. На мерседес GLC ничего не шумит. Выбирал между ними и LATITUDE SPORT 3, однозначно не прогадал! Очень советую.
               .d-flex.flex-wrap.align-items-start.border-bottom.pb-4.mb-4
                 .col-md-3.d-flex.align-items-center.mb-3
-                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.p-3.mr-3
+                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.p-3.mr-3
                     +icon('user')
                   .text-left
-                    .h4.color-theme-brand.mb-3 Дмитрий Леухин
+                    .h4.color-theme-blue.mb-3 Дмитрий Леухин
                     .h6 6 июня 2021
                 .col-md-9.h5 Сразу после первого выезда восхитился! Сцепление выше всяких похвал, руль стал крутиться чуть жестче и четче, по мягкости средние (то что надо).Тот же LATITUDE SPORT 3 стоит дороже а по параметрам хуже. Отличные шины. Много сомневался так как в отзывах писали что сильно шумят, но по факту НЕТ. Нет никакого шума. Может если на "ведро" ставить можно что то услышать. На мерседес GLC ничего не шумит. Выбирал между ними и LATITUDE SPORT 3, однозначно не прогадал! Очень советую.
               .d-flex.flex-wrap.align-items-start.border-bottom.pb-4.mb-4
                 .col-md-3.d-flex.align-items-center.mb-3
-                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.p-3.mr-3
+                  .rounded-circle.h1.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.p-3.mr-3
                     +icon('user')
                   .text-left
-                    .h4.color-theme-brand.mb-3 Дмитрий Леухин
+                    .h4.color-theme-blue.mb-3 Дмитрий Леухин
                     .h6 6 июня 2021
                 .col-md-9.h5 Сразу после первого выезда восхитился! Сцепление выше всяких похвал, руль стал крутиться чуть жестче и четче, по мягкости средние (то что надо).Тот же LATITUDE SPORT 3 стоит дороже а по параметрам хуже. Отличные шины. Много сомневался так как в отзывах писали что сильно шумят, но по факту НЕТ. Нет никакого шума. Может если на "ведро" ставить можно что то услышать. На мерседес GLC ничего не шумит. Выбирал между ними и LATITUDE SPORT 3, однозначно не прогадал! Очень советую.
               nav.pagination.mb-2
                 a.pagination__item.pagination__item_prev(href="#")
-                  +icon('readmore-right','h3 color-theme-brand')
+                  +icon('readmore-right','h3 color-theme-blue')
                 span.pagination__item.pagination__item_current 1
                 a.pagination__item(href="#") 2
                 a.pagination__item(href="#") 3
@@ -228,7 +228,7 @@ block wrapper
                 span.pagination__item.pagination__item_divider ...
                 a.pagination__item(href="#") 57
                 a.pagination__item.pagination__item_next(href="#")
-                  +icon('readmore-right','h3 color-theme-brand')
+                  +icon('readmore-right','h3 color-theme-blue')
         .tab-pane.fade.show.px-lg-3(id="pos-points" role="tabpanel")
         .tab-pane.fade.show.px-lg-3(id="pos-wallet" role="tabpanel")
 
@@ -278,14 +278,14 @@ block wrapper
       include base/content.pug
       .content__footer
         button.readmore.readmore_btn(type="button")
-          +icon('readmore','h2 color-theme-brand')
+          +icon('readmore','h2 color-theme-blue')
 
   .modal.fade#alert(tabindex="-1" aria-hidden="true")
     form.modal-dialog(action="#")
       .modal-content.border-0.box-shadow.pt-3.pb-4
         .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
-          .h3.font-weight-bold.color-theme-brand.mr-3 Товара нет в наличии
-          button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+          .h3.font-weight-bold.color-theme-blue.mr-3 Товара нет в наличии
+          button.close.h2.button-unstyled.color-theme-blue.py-0(data-dismiss="modal")
             +icon('close')
         .modal-body.border-bottom.pt-0.px-4.pb-2.mb-3
           .h5.mb-4 Оставьте свой номер телефона и мы сообщим, когда данный товар  появится в нашем магазине. Так же вы может получать уведомления через мессенджеры.
@@ -295,10 +295,10 @@ block wrapper
               .form__label.form__label_title Номер телефона *
           .contacts
             a.contacts__item.h5.text-nowrap.mb-3(href="#")
-              +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
+              +icon('wapp-filled','contacts__icon h3 color-theme-blue mr-2')
               span.contacts__item-title Сообщить в WhatsApp
             a.contacts__item.h5.text-nowrap.mb-2(href="#")
-              +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
+              +icon('tg-filled','contacts__icon h3 color-theme-blue mr-2')
               span.contacts__item-title Сообщить в Telegram
         .text-center.px-4
           button.button.text-uppercase.px-4.mb-3(type="submit") Сообщить мне
