--- a/src/pug/results-auto.pug
+++ b/src/pug/results-auto.pug
@@ -24,7 +24,7 @@ block results__sidebar
     .aside__wrapper
       form.form.form_bg.form_filter.mb-lg-3(action="#")
         .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
-          .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
+          .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-blue.mb-0.mb-lg-2
             +icon('car','form__title-icon h3 mr-1')
             | Подбор по авто
           button.button-unstyled.h6(type="reset") Сбросить
@@ -85,17 +85,17 @@ block results__sidebar
                 .car-color.color-grey.mr-1.mb-2(data-color="grey")
                 .car-color.color-bez.active.mr-1.mb-2(data-color="bez")
           a.d-flex.align-items-center.h5.text-nowrap.mb-4(href="#")
-            +icon('tires','contacts__icon h2 color-theme-brand mr-3')
+            +icon('tires','contacts__icon h2 color-theme-blue mr-3')
             | Подборать шины
           a.d-flex.align-items-center.h5.text-nowrap(href="#")
-            +icon('wheels','contacts__icon h2 color-theme-brand mr-3')
+            +icon('wheels','contacts__icon h2 color-theme-blue mr-3')
             | Подборать диски
 
   #params.aside.aside_pos_fixed
     .aside__wrapper
       form.form.form_bg.form_filter.mb-lg-3(action="#")
         .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
-          .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
+          .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-blue.mb-0.mb-lg-2
             +icon('compare','form__title-icon h3 mr-1')
             | Параметры подбора
         .form__section
@@ -291,4 +291,4 @@ block results__sidebar
         .d-flex.justify-content-center
           button.readmore.d-flex.align-items-center(type="submit" data-toggle="list" data-target="#brand")
             span.h6.mr-2.pointer-events-none Показать еще
-            +icon('readmore','h3 color-theme-brand readmore__icon')
+            +icon('readmore','h3 color-theme-blue readmore__icon')
