--- a/src/pug/results.pug
+++ b/src/pug/results.pug
@@ -57,7 +57,7 @@ block wrapper
               +card(results__item.price__old,results__item.price__new,results__item.title,results__item.label,results__item.warranty,results__item.credit,results__item.card,results__item.delivery,results__item.repair,results__item.winter,results__item.spikes,true,'card_tile d-sm-flex')
         nav.pagination
           a.pagination__item.pagination__item_prev(href="#")
-            +icon('readmore-right','h3 color-theme-brand')
+            +icon('readmore-right','h3 color-theme-blue')
           span.pagination__item.pagination__item_current 1
           a.pagination__item(href="#") 2
           a.pagination__item(href="#") 3
@@ -65,7 +65,7 @@ block wrapper
           span.pagination__item.pagination__item_divider ...
           a.pagination__item(href="#") 57
           a.pagination__item.pagination__item_next(href="#")
-            +icon('readmore-right','h3 color-theme-brand')
+            +icon('readmore-right','h3 color-theme-blue')
 
     block results__seealso
       .mb-3
@@ -85,4 +85,4 @@ block wrapper
       include base/content.pug
       .content__footer
         button.readmore.readmore_btn(type="button")
-          +icon('readmore','h2 color-theme-brand')
+          +icon('readmore','h2 color-theme-blue')
