--- a/src/pug/sales-item.pug
+++ b/src/pug/sales-item.pug
@@ -39,7 +39,7 @@ block wrapper
             li Время обработки заказа может увеличиться до 2 (двух) дней.
           .content__footer
             button.readmore.readmore_btn(type="button")
-              +icon('readmore','h2 color-theme-brand')
+              +icon('readmore','h2 color-theme-blue')
 
     .mb-3
       .h2.font-weight-bold.mb-4 Товары участвующие в акции:
@@ -51,4 +51,4 @@ block wrapper
       include base/content.pug
       .content__footer
         button.readmore.readmore_btn(type="button")
-          +icon('readmore','h2 color-theme-brand')
+          +icon('readmore','h2 color-theme-blue')
