--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -45,15 +45,15 @@ block wrapper
               +icon('arrow-next')
           .swiper-wrapper
             .swiper-slide.px-3
-              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.mb-3
                 +icon('scales')
               p Уменьшение срока службы подвески. Неточная или не качественная балансировка может привести к поломке всей ходовой. При некачественной балансировке, неверно выбранный груз или неверном его креплении на диске в процессе эксплуатации груз может слететь.
             .swiper-slide.px-3
-              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.mb-3
                 +icon('target')
               p Неравномерная изношенность покрышек. При неверной балансировке износ шин происходит намного быстрее, что может привести не только к преждевременной замены покрышки, но и к возникновению аварийной ситуации на дороге.
             .swiper-slide.px-3
-              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.mb-3
                 +icon('attention')
               p Безопасность на дороге. Дороже этого ничего быть не может. Сэкономленные 2 часа на смену комплекта шин у непрофессионалов не стоят Вашей безопасности и безопасности Ваших близких.
 
@@ -67,12 +67,12 @@ block wrapper
             p Все работы осуществляют только квалифицированные специалисты, прошедшие профессионально-техническое обучение.
             p У нас вы можете произвести полный комплекс услуг профессионального шиномонтажа: монтаж-демонтаж легковых шин, шин для внедорожников и микроавтобусов, балансировку и ремонт колес, шиномонтаж мотошин.
             p Все шиномонтажные работы выполняются на новейшем высококачественном немецком оборудовании фирмы Hofmann, а стоимость услуг вас приятно удивит.
-          .h3.color-theme-brand.font-weight-bold.mb-2 Получить более подробную информацию
+          .h3.color-theme-blue.font-weight-bold.mb-2 Получить более подробную информацию
             br
             | или записаться вы можете по телефону:
           .contacts
-            a.contacts__item.h3.font-weight-bold.text-nowrap.color-theme-brand(href="tel:+73652777068")
-              +icon('phone','contacts__icon h3 color-theme-brand mr-2')
+            a.contacts__item.h3.font-weight-bold.text-nowrap.color-theme-blue(href="tel:+73652777068")
+              +icon('phone','contacts__icon h3 color-theme-blue mr-2')
               span.contacts__item-title +7 (863) 22-99-99-4
     .mb-3
       .h2.font-weight-bold.mb-4 Отзывы
@@ -82,46 +82,46 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
-                  .review__title.d-block.h4.color-theme-brand Анатолий Ефимов
+                  .review__title.d-block.h4.color-theme-blue Анатолий Ефимов
                   .date 10 дек в 11:37
               .review__content.h5 Был 10 декабря, отличный сервис. Сам ещё приеду и всем друзьям посоветую. Мастеру большой репект! Мне очень понравилось, советую ВСЕМ!!!
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
-                  .review__title.d-block.h4.color-theme-brand Павел Антипин
+                  .review__title.d-block.h4.color-theme-blue Павел Антипин
                   .date 10 дек в 11:37
               .review__content.h5 Друг присоветовал этот салон. Приехал, не пожалел. Ребята, сервис шикарный! И доступно, и оперативно, и без проблем. Теперь сам работаю сарафанным радио и друзьям советую!
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
-                  .review__title.d-block.h4.color-theme-brand Костя Боярский
+                  .review__title.d-block.h4.color-theme-blue Костя Боярский
                   .date 10 дек в 11:37
               .review__content.h5 Терпеть не могу сам лезть менять! Считаю, что лучше обратиться к спецам, чем возиться. В последний раз обращался сюда, сервис очень понравился. Думаю, дальше тоже буду кататься к Вашему мастеру!
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
-                  .review__title.d-block.h4.color-theme-brand Иван Трактиров
+                  .review__title.d-block.h4.color-theme-blue Иван Трактиров
                   .date 10 дек в 11:37
               .review__content.h5 Приезжал сюда ставить шины на зимний сезон. Вот и масло решил приехать менять сюда же. Мастера отличные, работают быстро и качественно. Рекомендую всем!
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                .icon-rounded.h2.d-flex.align-items-center.justify-content-center.color-theme-blue.bg-theme-light.mr-3
                   +icon('emoji')
                 .review__meta.flex-grow-1
-                  .review__title.d-block.h4.color-theme-brand Анатолий Ефимов
+                  .review__title.d-block.h4.color-theme-blue Анатолий Ефимов
                   .date 10 дек в 11:37
               .review__content.h5 Был 10 декабря, отличный сервис. Сам ещё приеду и всем друзьям посоветую. Мастеру большой репект! Мне очень понравилось, советую ВСЕМ!!!
   .wrapper
@@ -149,7 +149,7 @@ block wrapper
   .d-flex.justify-content-center.mb-5
     a.readmore.d-flex.align-items-center(href="#")
       span.h5.mr-2 Узнать больше о компании
-      +icon('readmore-right','h3 color-theme-brand')
+      +icon('readmore-right','h3 color-theme-blue')
 
   .wrapper
     include base/callorder.pug
@@ -158,4 +158,4 @@ block wrapper
       include base/content.pug
       .content__footer
         button.readmore.readmore_btn(type="button")
-          +icon('readmore','h2 color-theme-brand')
+          +icon('readmore','h2 color-theme-blue')
