--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -33,7 +33,7 @@ block wrapper
       .brand.d-flex.flex-wrap.bg-white.h-auto.p-3.mb-3
         .col-xl-2.col-lg-3.d-flex.flex-column.align-items-center.justify-content-center.mb-3.mb-lg-0
           +img('content/logo/logo-1.jpg','mb-3')
-          .h4.color-theme-brand Cordiant
+          .h4.color-theme-blue Cordiant
         .brand__desc.h4.col-xl-10.col-lg-9 Компания Bridgestone – мировой лидер по производству автомобильных шин. Зимние и летние автомобильные шины Бриджстоун — символ качества и безопасности. Шины Бриджстоун — это совершенные технологии, прошедшие проверку в самых жестких условиях. Шины Бриджстоун марки Potenza используются в гонках «Формулы-1». Продажа зимних и летних автошин Bridgestone, возможность осуществить выбор шин по марке автомобиля. Шины Бриджстоун — гарантия вашего безопасности и спокойствия.
       .row
         .col-xl-2.col-lg-3.mb-lg-4
@@ -67,7 +67,7 @@ block wrapper
                       .card__features.mb-1.mb-sm-0
                         .icon-marker
                           +icon('summer')
-                      .card__params.flex-grow-1.text-sm-right.color-theme-brand.mb-1.mb-sm-0 R16 / R17 / R18 / R19
+                      .card__params.flex-grow-1.text-sm-right.color-theme-blue.mb-1.mb-sm-0 R16 / R17 / R18 / R19
                     a.card__title.d-block.mb-3(href="#")!= positions__item
                   .card__footer
                     .card__meta.card__meta_row
@@ -112,4 +112,4 @@ block wrapper
         include base/content.pug
         .content__footer
           button.readmore.readmore_btn(type="button")
-            +icon('readmore','h2 color-theme-brand')
+            +icon('readmore','h2 color-theme-blue')
