--- a/src/pug/subcategory.pug
+++ b/src/pug/subcategory.pug
@@ -50,9 +50,9 @@ block wrapper
             .section.section_filter.bg-theme-white.py-0.mb-lg-3
               .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
                 button.button.button_nobg.h4.p-0(type="button")
-                  +icon('settings','color-theme-brand h3 mr-2')
-                  span.color-theme-brand Подобрать по VIN
-                span.section__readmore.readmore.d-none.d-lg-block.color-theme-brand
+                  +icon('settings','color-theme-blue h3 mr-2')
+                  span.color-theme-blue Подобрать по VIN
+                span.section__readmore.readmore.d-none.d-lg-block.color-theme-blue
                   +icon('readmore','h3')
               form.section__body.section__body_visible(action="#")
                 .form.border-bottom.px-md-4.px-3.pt-md-4.pt-3
@@ -119,7 +119,7 @@ block wrapper
           .table-row__col.table-row__col_subcategory-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
             .d-flex.align-items-center
               .bubble.bubble_pos_abs.zi-2
-                +icon('photo','h2 color-theme-brand mr-2')
+                +icon('photo','h2 color-theme-blue mr-2')
                 .bubble__picture.box-shadow.border.border-radius
                   +img('content/cards/pirelli.jpg','img-cover border-radius zi-2', true)
               a.table-row__title.h5(href="#" itemprop="url")
@@ -138,7 +138,7 @@ block wrapper
               span(itemprop="sku") 3
               | &nbsp;шт.
           .table-row__col.table-row__col_subcategory-btn.d-flex.align-items-center.justify-content-center.zi-2
-            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
               input.recalculate__field.d-none(type="number" name="count" value="4")
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -155,7 +155,7 @@ block wrapper
           .table-row__col.table-row__col_subcategory-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
             .d-flex.align-items-center
               .bubble.bubble_pos_abs.zi-2
-                +icon('photo','h2 color-theme-brand mr-2')
+                +icon('photo','h2 color-theme-blue mr-2')
                 .bubble__picture.box-shadow.border.border-radius
                   +img('content/cards/pirelli.jpg','img-cover border-radius zi-2', true)
               a.table-row__title.h5(href="#" itemprop="url")
@@ -174,7 +174,7 @@ block wrapper
               span(itemprop="sku") 3
               | &nbsp;шт.
           .table-row__col.table-row__col_subcategory-btn.d-flex.align-items-center.justify-content-center.zi-2
-            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
               input.recalculate__field.d-none(type="number" name="count" value="4")
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -191,7 +191,7 @@ block wrapper
           .table-row__col.table-row__col_subcategory-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
             .d-flex.align-items-center
               .bubble.bubble_pos_abs.zi-2
-                +icon('photo','h2 color-theme-brand mr-2')
+                +icon('photo','h2 color-theme-blue mr-2')
                 .bubble__picture.box-shadow.border.border-radius
                   +img('content/cards/pirelli.jpg','img-cover border-radius zi-2', true)
               a.table-row__title.h5(href="#" itemprop="url")
@@ -210,7 +210,7 @@ block wrapper
               span(itemprop="sku") 3
               | &nbsp;шт.
           .table-row__col.table-row__col_subcategory-btn.d-flex.align-items-center.justify-content-center.zi-2
-            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
               input.recalculate__field.d-none(type="number" name="count" value="4")
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -227,7 +227,7 @@ block wrapper
           .table-row__col.table-row__col_subcategory-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
             .d-flex.align-items-center
               .bubble.bubble_pos_abs.zi-2
-                +icon('photo','h2 color-theme-brand mr-2')
+                +icon('photo','h2 color-theme-blue mr-2')
                 .bubble__picture.box-shadow.border.border-radius
                   +img('content/cards/pirelli.jpg','img-cover border-radius zi-2', true)
               a.table-row__title.h5(href="#" itemprop="url")
@@ -246,7 +246,7 @@ block wrapper
               span(itemprop="sku") 3
               | &nbsp;шт.
           .table-row__col.table-row__col_subcategory-btn.d-flex.align-items-center.justify-content-center.zi-2
-            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
               input.recalculate__field.d-none(type="number" name="count" value="4")
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -280,7 +280,7 @@ block wrapper
               span(itemprop="sku") 3
               | &nbsp;шт.
           .table-row__col.table-row__col_subcategory-btn.d-flex.align-items-center.justify-content-center.zi-2
-            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
               input.recalculate__field.d-none(type="number" name="count" value="4")
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -314,7 +314,7 @@ block wrapper
               span(itemprop="sku") 3
               | &nbsp;шт.
           .table-row__col.table-row__col_subcategory-btn.d-flex.align-items-center.justify-content-center.zi-2
-            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+            .recalculate.recalculate_md.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
               input.recalculate__field.d-none(type="number" name="count" value="4")
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -323,7 +323,7 @@ block wrapper
               button.button.text-uppercase.px-3(type="submit") В корзину
         nav.pagination
           a.pagination__item.pagination__item_prev(href="#")
-            +icon('readmore-right','h3 color-theme-brand')
+            +icon('readmore-right','h3 color-theme-blue')
           span.pagination__item.pagination__item_current 1
           a.pagination__item(href="#") 2
           a.pagination__item(href="#") 3
@@ -331,7 +331,7 @@ block wrapper
           span.pagination__item.pagination__item_divider ...
           a.pagination__item(href="#") 57
           a.pagination__item.pagination__item_next(href="#")
-            +icon('readmore-right','h3 color-theme-brand')
+            +icon('readmore-right','h3 color-theme-blue')
     include category/popular.pug
 
     .mb-3
@@ -344,4 +344,4 @@ block wrapper
       include base/content.pug
       .content__footer
         button.readmore.readmore_btn(type="button")
-          +icon('readmore','h2 color-theme-brand')
+          +icon('readmore','h2 color-theme-blue')
