--- a/src/pug/ui_modals.pug
+++ b/src/pug/ui_modals.pug
@@ -29,21 +29,21 @@ block footer
       .modal-content.border-0.box-shadow.overflow-hidden.p-md-5.p-4
         +svg('settings','modal__bg')
         .modal-header.d-flex.align-items-center.justify-content-between.border-0.zi-2.p-0.mb-4
-          .h3.font-weight-bold.color-theme-brand.mr-3 Ваш запрос на подбор по VIN успешно отправлен
-          button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+          .h3.font-weight-bold.color-theme-blue.mr-3 Ваш запрос на подбор по VIN успешно отправлен
+          button.close.h2.button-unstyled.color-theme-blue.py-0(data-dismiss="modal")
             +icon('close')
         .modal-body.zi-2.p-0.mb-4
           .h4.mb-3 Ваша заявка №49409 от 07.06.2021 (16:37:23) успешно оформлена и будет обработана в ближайшее время.
           .h4.mb-3 Результаты подбора можно будет посмотреть в&nbsp;
-            a.color-theme-brand(href="#") личном кабинете.
+            a.color-theme-blue(href="#") личном кабинете.
             | Так же, Вы можете получать информацию в удобных для вас месенджерах, сообщив нам номер своей заявки.
         .row.zi-2
           .contacts.d-md-flex.flex-wrap.align-items-center.col-xl-10.mb-xl-0.mb-3
             a.contacts__item.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
-              +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
+              +icon('tg-filled','contacts__icon h3 color-theme-blue mr-2')
               span.contacts__item-title Продолжить в Telegram
             a.contacts__item.h5.text-nowrap.mb-2.mb-xl-0(href="#")
-              +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
+              +icon('wapp-filled','contacts__icon h3 color-theme-blue mr-2')
               span.contacts__item-title Продолжить в WhatsApp
           .col-xl-2.d-flex.justify-content-xl-end
             button.button.text-uppercse.px-4(type="button" data-dismiss="modal") OK
@@ -53,13 +53,13 @@ block footer
       .modal-content.border-0.box-shadow.py-3
         +svg('checked-double','modal__bg modal__bg_checked')
         .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
-          .h3.font-weight-bold.color-theme-brand.mr-3 Заказ успешно оформлен
-          button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+          .h3.font-weight-bold.color-theme-blue.mr-3 Заказ успешно оформлен
+          button.close.h2.button-unstyled.color-theme-blue.py-0(data-dismiss="modal")
             +icon('close')
         .modal-body.border-bottom.pt-0.px-4.pb-3.mb-3.zi-2
           .h5.mb-4 Ваш заказ успешно оформлен и будет обработан в ближайшее время. С вами свяжется менеджер для его подтверждения.
           .h5.mb-4 Вы можете следить за выполнением своего заказа в&nbsp;
-            a.color-theme-brand(href="#") личном кабинете.&nbsp;
+            a.color-theme-blue(href="#") личном кабинете.&nbsp;
             | Либо Вы можете получать информацию удобных для вас месенджерах, сообщив нам номер своего заказа.
           .desclist
             .d-flex.align-items-center.mb-1
@@ -71,12 +71,12 @@ block footer
         .px-4
           .row.align-items-center.zi-2
             .contacts.d-md-flex.flex-wrap.align-items-center.col-xl-10.mb-xl-0.mb-3
-              .h5.color-theme-brand.col-12.px-0.mb-2 Добравляйтесь и получайте напоминание там, где это удобно:
+              .h5.color-theme-blue.col-12.px-0.mb-2 Добравляйтесь и получайте напоминание там, где это удобно:
               a.contacts__item.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
-                +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
+                +icon('tg-filled','contacts__icon h3 color-theme-blue mr-2')
                 span.contacts__item-title Следить в Telegram
               a.contacts__item.h5.text-nowrap.mb-2.mb-xl-0(href="#")
-                +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
+                +icon('wapp-filled','contacts__icon h3 color-theme-blue mr-2')
                 span.contacts__item-title Следить в WhatsApp
             .col-xl-2.d-flex.justify-content-xl-end
               button.button.text-uppercse.px-4(type="button" data-dismiss="modal") OK
@@ -86,8 +86,8 @@ block footer
       .modal-content.border-0.box-shadow.py-3
         +svg('checked-double','modal__bg modal__bg_checked')
         .modal-header.d-flex.align-items-center.justify-content-between.border-0.py-0.px-4.mb-4
-          .h3.font-weight-bold.color-theme-brand.mr-3 Запись на шиномонтаж успешно оформлена. Ждем вас в назначенное время.
-          button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+          .h3.font-weight-bold.color-theme-blue.mr-3 Запись на шиномонтаж успешно оформлена. Ждем вас в назначенное время.
+          button.close.h2.button-unstyled.color-theme-blue.py-0(data-dismiss="modal")
             +icon('close')
         .modal-body.border-bottom.pt-0.px-4.pb-3.mb-3.zi-2
           .desclist
@@ -106,12 +106,12 @@ block footer
         .px-4
           .row.align-items-center.zi-2
             .contacts.d-md-flex.flex-wrap.align-items-center.col-xl-10.mb-xl-0.mb-3
-              .h5.color-theme-brand.col-12.px-0.mb-2 Добравляйтесь и получайте напоминание там, где это удобно:
+              .h5.color-theme-blue.col-12.px-0.mb-2 Добравляйтесь и получайте напоминание там, где это удобно:
               a.contacts__item.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
-                +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
+                +icon('tg-filled','contacts__icon h3 color-theme-blue mr-2')
                 span.contacts__item-title Следить в Telegram
               a.contacts__item.h5.text-nowrap.mb-2.mb-xl-0(href="#")
-                +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
+                +icon('wapp-filled','contacts__icon h3 color-theme-blue mr-2')
                 span.contacts__item-title Следить в WhatsApp
             .col-xl-2.d-flex.justify-content-xl-end
               button.button.text-uppercse.px-4(type="button" data-dismiss="modal") OK
