--- a/src/scss/base/_bg.scss
+++ b/src/scss/base/_bg.scss
@@ -10,12 +10,12 @@
   background: $color__light !important;
 }
 
-.bg-theme-brand {
-  background: $color__brand !important;
+.bg-theme-blue {
+  background: $color__blue !important;
 }
 
-.bg-theme-brand-dark {
-  background: $color__brand_dark !important;
+.bg-theme-blue-dark {
+  background: $color__blue_dark !important;
 }
 
 .bg-theme-success {
