--- a/src/scss/icons/style.scss
+++ b/src/scss/icons/style.scss
@@ -74,7 +74,7 @@
 .ds-icon-allseason .path1 {
   &:before {
     content: $ds-icon-allseason-path1;
-    color: $color__brand;
+    color: $color__blue;
   }
 }
 .ds-icon-allseason .path2 {
@@ -197,7 +197,7 @@
 .ds-icon-founding .path1 {
   &:before {
     content: $ds-icon-founding-path1;
-    color: $color__brand;
+    color: $color__blue;
   }
 }
 .ds-icon-founding .path2 {
@@ -220,7 +220,7 @@
 .ds-icon-iron {
   &:before {
     content: $ds-icon-iron;
-    color: $color__brand;
+    color: $color__blue;
   }
 }
 .ds-icon-list {
@@ -282,7 +282,7 @@
 .ds-icon-nonspikes {
   &:before {
     content: $ds-icon-nonspikes;
-    color: $color__brand;
+    color: $color__blue;
   }
 }
 .ds-icon-oil {
@@ -353,13 +353,13 @@
 .ds-icon-spikes {
   &:before {
     content: $ds-icon-spikes;
-    color: $color__brand;
+    color: $color__blue;
   }
 }
 .ds-icon-steel .path1 {
   &:before {
     content: $ds-icon-steel-path1;
-    color: $color__brand;
+    color: $color__blue;
   }
 }
 .ds-icon-steel .path2 {
@@ -448,7 +448,7 @@
 .ds-icon-winter {
   &:before {
     content: $ds-icon-winter;
-    color: $color__brand;
+    color: $color__blue;
   }
 }
 .ds-icon-youtube {
