--- a/src/scss/tpl/_booking-heading.scss
+++ b/src/scss/tpl/_booking-heading.scss
@@ -6,7 +6,7 @@
     pointer-events: all;
 
     .booking-heading__counter {
-      background-color: $color__brand;
+      background-color: $color__blue;
     }
 
     .booking-heading__title {
