--- a/src/scss/tpl/_card.scss
+++ b/src/scss/tpl/_card.scss
@@ -143,7 +143,7 @@
     justify-content: flex-start;
     overflow: hidden;
     white-space: nowrap;
-    color: $color__brand;
+    color: $color__blue;
 
     //padding: .125rem .375rem;
     padding: .375rem;
@@ -198,7 +198,7 @@
 }
 
 .card__btn-icon {
-  color: $color__brand;
+  color: $color__blue;
   transition: all .3s ease;
 }
 
@@ -249,7 +249,7 @@
         .card__features-title {
           opacity: 1;
           transform: scale(1);
-          background: $color__brand;
+          background: $color__blue;
         }
       }
 
@@ -311,7 +311,7 @@
       @include wh(26px);
       padding: .25rem;
       border-radius: 50%;
-      background: $color__brand;
+      background: $color__blue;
       transition: all .3s ease;
     }
 
@@ -337,7 +337,7 @@
   @include fw(16px);
   @include wh(16px);
   margin: 0 .5rem 0 0;
-  color: $color__brand;
+  color: $color__blue;
   transition: all .3s ease;
 
   &:not(.active) {
@@ -354,7 +354,7 @@
 
 .card__features-content {
   cursor: pointer;
-  background: $color__brand;
+  background: $color__blue;
   transition: background .3s ease;
 
   .card__features-icon {
@@ -425,7 +425,7 @@
   &.card__price_new {
     @include h5;
     font-weight: bold;
-    color: $color__brand;
+    color: $color__blue;
   }
 }
 
