--- a/src/scss/tpl/_cart.scss
+++ b/src/scss/tpl/_cart.scss
@@ -10,7 +10,7 @@
       bottom: 0;
       z-index: 1040;
       color: #fff;
-      background: $color__brand;
+      background: $color__blue;
     }
 
     &.cart-summary_row {
