--- a/src/scss/tpl/_content.scss
+++ b/src/scss/tpl/_content.scss
@@ -18,7 +18,7 @@
   h4 {
     @include h4;
     font-weight: normal;
-    color: $color__brand;
+    color: $color__blue;
     margin-bottom: .25rem;
   }
 
