--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -4,7 +4,7 @@
   padding: .125rem .25rem;
   align-self: center;
   border-radius: 50%;
-  color: $color__brand;
+  color: $color__blue;
   transition: all .3s ease;
 }
 
@@ -323,7 +323,7 @@
   min-width: 18px;
   margin-bottom: .25rem;
   justify-content: center;
-  color: $color__brand;
+  color: $color__blue;
   background-color: $color__light;
 
   &:last-child {
