--- a/src/scss/tpl/_panel-close-btn.scss
+++ b/src/scss/tpl/_panel-close-btn.scss
@@ -4,7 +4,7 @@
   @include wh(100%,72px);
   padding: 1.5rem 2rem;
   color: #fff;
-  background-color: $color__brand;
+  background-color: $color__blue;
 
   @include media-breakpoint-up(xl) {
     display: none;
