--- a/src/pug/article__item.pug
+++ b/src/pug/article__item.pug
@@ -22,7 +22,7 @@ block wrapper
                 span(itemprop="name") Как самостоятельно заменить тормозную жидкость
                 meta(itemprop="position" content="3")
           .content.px-lg-5.px-md-4
-            .color-theme-brand
+            .color-theme-blue
               h1(itemprop="headline") Как самостоятельно заменить тормозную жидкость
             .date.mb-2(itemprop="datePublished" datetime="2021-11-30") 30 ноября 2021
             span.d-none(itemprop="author") ДонШина Ростов
@@ -37,7 +37,7 @@ block wrapper
     article(itemprop="articleBody")
       .section.px-lg-0.px-3.mb-5
         .content.px-lg-5.px-md-4
-          .color-theme-brand.text-center
+          .color-theme-blue.text-center
             h2 Почему нужно менять тормозную жидкость вовремя
           .content__columns
             p Её состав даёт одно неприятное свойство: гигроскопичность. Проще говоря, жидкость активно впитывает влагу. Как следствие, она теряет свои основные свойства. У только что купленной жидкости для тормозов точка кипения находится на отметке в 260-265 градусов. Но стоит ей разбавиться водой хотя бы на 3-4 процента, как она начнёт закипать уже при 160 градусах.
@@ -51,7 +51,7 @@ block wrapper
 
       .section.px-lg-0.px-3.mb-4
         .content.px-lg-5.px-md-4
-          .color-theme-brand.text-center
+          .color-theme-blue.text-center
             h2 Как заменить тормозную жидкость без прокачки
           .content__columns
             p Самый простой способ давно известен даже начинающим автомобилистам. Но так называемая «прокачка» тормозов требует либо помощника, либо постоянной беготни от кабины до каждого отдельного колеса. Можно самостоятельно заменить тормозную жидкость методом проливания.
@@ -59,9 +59,9 @@ block wrapper
             p Загоните автомобиль на эстакаду или смотровую яму. Чтобы одному человеку быстро заменить тормозную жидкость, понадобится подобрать 4 небольшие ёмкости и столько же небольших шлангов или трубок. Диаметр нужно подбирать так, чтобы они плотно надевались на штуцеры каждого цилиндра. Один конец трубок надевается на открытый штуцер, а второй опускается в бутылку.
             p Теперь откройте бачок тормозной жидкости и шприцем или клизмой откачайте как можно больше старой. После чего медленно заливайте новую. Всего вам потребуется примерно литр. Оценивайте объём, вытекающий в каждую ёмкость. После того, как в передние сольётся примерно по 200 мл, а в задние — по 250-300 мл, замену можно считать завершённой. Аккуратно затяните штуцеры и доведите уровень тормозной жидкости в бачке до рекомендуемого. Учтите, что ёмкости будут наполняться неравномерно, поэтому вам придётся делать паузы, чтобы затягивать штуцеры вовремя.
       .d-flex.justify-content-center.mb-5
-        a.readmore.d-flex.align-items-center.color-theme-brand(href="#")
+        a.readmore.d-flex.align-items-center.color-theme-blue(href="#")
           span.h4.mr-2 Другие статьи
-          +icon('readmore','h3 color-theme-brand')
+          +icon('readmore','h3 color-theme-blue')
 
     .mb-3
       .h2.font-weight-bold.mb-4 Рекомендуем так же:
@@ -73,4 +73,4 @@ block wrapper
       include base/content.pug
       .content__footer
         button.readmore.readmore_btn(type="button")
-          +icon('readmore','h2 color-theme-brand')
+          +icon('readmore','h2 color-theme-blue')
