--- a/src/pug/base/filter-details.pug
+++ b/src/pug/base/filter-details.pug
@@ -2,13 +2,13 @@
   .aside__wrapper
     form.form.form_bg.form_filter.mb-lg-3(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
-        .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-brand
+        .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-blue
           +icon('detail','form__title-icon h3 mr-1')
           span.mr-2 Автотовары
           a(href="#")
-            +icon('readmore','h3 color-theme-brand')
+            +icon('readmore','h3 color-theme-blue')
       .form__section.pt-2.pb-3
-        .h4.color-theme-brand.mb-1 Подбор авточехлов
+        .h4.color-theme-blue.mb-1 Подбор авточехлов
         button.button-unstyled.h6(type="reset") Сбросить
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Применяемость
@@ -163,8 +163,8 @@
       .d-flex.justify-content-center
         button.readmore.d-flex.align-items-center(type="submit" data-toggle="list" data-target="#brand")
           span.h6.mr-2.pointer-events-none Показать еще
-          +icon('readmore','h3 color-theme-brand readmore__icon')
-    .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4(style="top:190px;")
+          +icon('readmore','h3 color-theme-blue readmore__icon')
+    .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-blue.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4(style="top:190px;")
       .aside__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
         .h5.font-weight-normal.mr-2 Найдено:
         | 713
