--- a/src/pug/base/filter-tires.pug
+++ b/src/pug/base/filter-tires.pug
@@ -2,7 +2,7 @@
   .aside__wrapper
     form.form.form_bg.form_filter.mb-lg-3(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
-        .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
+        .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-blue.mb-0.mb-lg-2
           +icon('tires','form__title-icon h3 mr-1')
           | Подбор шин
         button.button-unstyled.h6(type="reset") Сбросить
@@ -172,8 +172,8 @@
       .d-flex.justify-content-center
         button.readmore.d-flex.align-items-center(type="submit" data-toggle="list" data-target="#brand")
           span.h6.mr-2.pointer-events-none Показать еще
-          +icon('readmore','h3 color-theme-brand readmore__icon')
-    .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4(style="top:574px;")
+          +icon('readmore','h3 color-theme-blue readmore__icon')
+    .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-blue.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4(style="top:574px;")
       .aside__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
         .h5.font-weight-normal.mr-2 Найдено:
         | 713
