--- a/src/pug/checkout__customer.pug
+++ b/src/pug/checkout__customer.pug
@@ -6,16 +6,16 @@ block meta
 block checkout
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-      span.section-counter.h4.rounded-circle.bg-theme-brand.color-theme-white.mr-2
+      span.section-counter.h4.rounded-circle.bg-theme-blue.color-theme-white.mr-2
         +icon('checked','color-theme-white')
-      .h3.flex-grow-1.font-weight-bold.color-theme-brand Дополнительные услуги
+      .h3.flex-grow-1.font-weight-bold.color-theme-blue Дополнительные услуги
       button.button.button_nobg.h5.h-auto.p-0(type="button")
-        +icon('edit','h3 color-theme-brand mr-sm-2')
+        +icon('edit','h3 color-theme-blue mr-sm-2')
         .d-none.d-sm-block Изменить
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-      span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 2
-      .h3.flex-grow-1.font-weight-bold.color-theme-brand Покупатель
+      span.section-counter.h3.rounded-circle.bg-theme-blue.color-theme-white.mr-2 2
+      .h3.flex-grow-1.font-weight-bold.color-theme-blue Покупатель
       a.h5(href="#") Авторизация
     .form.border-bottom.px-md-4.px-3.py-md-4.py-3
       .form__item.mb-4
@@ -32,9 +32,9 @@ block checkout
       button.button.text-uppercase.px-5(type="button") Далее
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-      span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 3
-      .h3.flex-grow-1.font-weight-bold.color-theme-brand Доставка
+      span.section-counter.h3.rounded-circle.bg-theme-blue.color-theme-white.mr-2 3
+      .h3.flex-grow-1.font-weight-bold.color-theme-blue Доставка
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-      span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 4
-      .h3.flex-grow-1.font-weight-bold.color-theme-brand Оплата
+      span.section-counter.h3.rounded-circle.bg-theme-blue.color-theme-white.mr-2 4
+      .h3.flex-grow-1.font-weight-bold.color-theme-blue Оплата
