--- a/src/pug/checkout__payment.pug
+++ b/src/pug/checkout__payment.pug
@@ -6,19 +6,19 @@ block meta
 block checkout
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-      span.section-counter.h4.rounded-circle.bg-theme-brand.color-theme-white.mr-2
+      span.section-counter.h4.rounded-circle.bg-theme-blue.color-theme-white.mr-2
         +icon('checked','color-theme-white')
-      .h3.flex-grow-1.font-weight-bold.color-theme-brand Дополнительные услуги
+      .h3.flex-grow-1.font-weight-bold.color-theme-blue Дополнительные услуги
       button.button.button_nobg.h5.h-auto.p-0(type="button")
-        +icon('edit','h3 color-theme-brand mr-sm-2')
+        +icon('edit','h3 color-theme-blue mr-sm-2')
         .d-none.d-sm-block Изменить
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-      span.section-counter.h4.rounded-circle.bg-theme-brand.color-theme-white.mr-2
+      span.section-counter.h4.rounded-circle.bg-theme-blue.color-theme-white.mr-2
         +icon('checked','color-theme-white')
-      .h3.flex-grow-1.font-weight-bold.color-theme-brand Покупатель
+      .h3.flex-grow-1.font-weight-bold.color-theme-blue Покупатель
       button.button.button_nobg.h5.h-auto.p-0(type="button")
-        +icon('edit','h3 color-theme-brand mr-sm-2')
+        +icon('edit','h3 color-theme-blue mr-sm-2')
         .d-none.d-sm-block Изменить
     .desclist.desclist.px-md-4.px-3.py-md-4.py-3
       .d-flex.align-items-center.mb-1
@@ -32,11 +32,11 @@ block checkout
         .h5.col-md-8 glumglam@gmail.com
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-      span.section-counter.h4.rounded-circle.bg-theme-brand.color-theme-white.mr-2
+      span.section-counter.h4.rounded-circle.bg-theme-blue.color-theme-white.mr-2
         +icon('checked','color-theme-white')
-      .h3.flex-grow-1.font-weight-bold.color-theme-brand Доставка
+      .h3.flex-grow-1.font-weight-bold.color-theme-blue Доставка
       button.button.button_nobg.h5.h-auto.p-0(type="button")
-        +icon('edit','h3 color-theme-brand mr-sm-2')
+        +icon('edit','h3 color-theme-blue mr-sm-2')
         .d-none.d-sm-block Изменить
     .desclist.desclist.px-md-4.px-3.py-md-4.py-3
       .d-flex.align-items-center.mb-1
@@ -47,8 +47,8 @@ block checkout
         .h5.col-md-8 Самовывоз из магазина (ул. Доватора, 11)
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-      span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 4
-      .h3.flex-grow-1.font-weight-bold.color-theme-brand Оплата
+      span.section-counter.h3.rounded-circle.bg-theme-blue.color-theme-white.mr-2 4
+      .h3.flex-grow-1.font-weight-bold.color-theme-blue Оплата
     .form.border-bottom.px-md-4.px-3.pb-md-4.pb-3
       .h6.color-theme-disabled.mb-3 Способ оплаты
       .row.align-items-center.mb-4
