--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -20,7 +20,7 @@ block wrapper
       .col-xl-3.col-lg-4.order-2.order-lg-1.mb-5.mb-lg-4
         .accordion.active.mb-2(itemscope itemtype="http://schema.org/AutoPartsStore")
           .accordion__header.px-4(data-target="rnd")
-            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-brand(type="button") ДонШина Ростов
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-blue(type="button") ДонШина Ростов
             +img('logo.png','d-none',true)
             meta(itemprop="name" content="ДонШина Ростов")
             meta(itemprop="priceRange" content="Информация о ценах по телефону +7 (863) 22-99-99-4")
@@ -36,22 +36,22 @@ block wrapper
               span.d-none(itemprop="addressLocality" content="Ростов-на-Дону")
               span.d-none(itemprop="streetAddress") ул. Доватора, 11
               .contacts__item.h5.text-wrap.mb-3
-                +icon('placemark','contacts__icon color-theme-brand mr-2')
+                +icon('placemark','contacts__icon color-theme-blue mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
               a.contacts__item.h3.font-weight-bold.text-nowrap.mb-3(href="#")
-                +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
+                +icon('phone-nobg','contacts__icon color-theme-blue mr-2')
                 span(itemprop="telephone") +7 (863) 22-99-99-4
               a.contacts__item.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
-                +icon('email','contacts__icon color-theme-brand mr-2')
+                +icon('email','contacts__icon color-theme-blue mr-2')
                 | office@don-shina.ru
               a.contacts__item.h5.text-nowrap.mb-3(href="#")
-                +icon('wapp','contacts__icon color-theme-brand mr-2')
+                +icon('wapp','contacts__icon color-theme-blue mr-2')
                 | WhatsApp
               a.contacts__item.h5.text-nowrap.mb-3(href="#")
-                +icon('tg','contacts__icon color-theme-brand mr-2')
+                +icon('tg','contacts__icon color-theme-blue mr-2')
                 | Telegram
               a.contacts__item.align-items-start.h5(href="#")
-                +icon('time','contacts__icon color-theme-brand mr-2')
+                +icon('time','contacts__icon color-theme-blue mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
@@ -61,7 +61,7 @@ block wrapper
                   | Вс. – Выходной
         .accordion.mb-2(itemscope itemtype="http://schema.org/AutoPartsStore")
           .accordion__header.px-4(data-target="taganrog")
-            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-brand(type="button") ДонШина Таганрог
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-blue(type="button") ДонШина Таганрог
             +img('logo.png','d-none',true)
             meta(itemprop="name" content="ДонШина Таганрог")
             meta(itemprop="priceRange" content="Информация о ценах по телефону +7 (863) 22-99-99-4")
@@ -77,22 +77,22 @@ block wrapper
               span.d-none(itemprop="addressLocality" content="Ростов-на-Дону")
               span.d-none(itemprop="streetAddress") ул. Доватора, 11
               .contacts__item.h5.text-wrap.mb-3
-                +icon('placemark','contacts__icon color-theme-brand mr-2')
+                +icon('placemark','contacts__icon color-theme-blue mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
               a.contacts__item.h3.font-weight-bold.text-nowrap.mb-3(href="#")
-                +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
+                +icon('phone-nobg','contacts__icon color-theme-blue mr-2')
                 span(itemprop="telephone") +7 (863) 22-99-99-4
               a.contacts__item.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
-                +icon('email','contacts__icon color-theme-brand mr-2')
+                +icon('email','contacts__icon color-theme-blue mr-2')
                 | office@don-shina.ru
               a.contacts__item.h5.text-nowrap.mb-3(href="#")
-                +icon('wapp','contacts__icon color-theme-brand mr-2')
+                +icon('wapp','contacts__icon color-theme-blue mr-2')
                 | WhatsApp
               a.contacts__item.h5.text-nowrap.mb-3(href="#")
-                +icon('tg','contacts__icon color-theme-brand mr-2')
+                +icon('tg','contacts__icon color-theme-blue mr-2')
                 | Telegram
               a.contacts__item.align-items-start.h5(href="#")
-                +icon('time','contacts__icon color-theme-brand mr-2')
+                +icon('time','contacts__icon color-theme-blue mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
@@ -102,7 +102,7 @@ block wrapper
                   | Вс. – Выходной
         .accordion(itemscope itemtype="http://schema.org/AutoPartsStore")
           .accordion__header.px-4(data-target="volgograd")
-            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-brand(type="button") ДонШина Волгоград
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-theme-blue(type="button") ДонШина Волгоград
             +img('logo.png','d-none',true)
             meta(itemprop="name" content="ДонШина Волгоград")
             meta(itemprop="priceRange" content="Информация о ценах по телефону +7 (863) 22-99-99-4")
@@ -118,22 +118,22 @@ block wrapper
               span.d-none(itemprop="addressLocality" content="Ростов-на-Дону")
               span.d-none(itemprop="streetAddress") ул. Доватора, 11
               .contacts__item.h5.text-wrap.mb-3
-                +icon('placemark','contacts__icon color-theme-brand mr-2')
+                +icon('placemark','contacts__icon color-theme-blue mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
               a.contacts__item.h3.font-weight-bold.text-nowrap.mb-3(href="#")
-                +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
+                +icon('phone-nobg','contacts__icon color-theme-blue mr-2')
                 span(itemprop="telephone") +7 (863) 22-99-99-4
               a.contacts__item.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
-                +icon('email','contacts__icon color-theme-brand mr-2')
+                +icon('email','contacts__icon color-theme-blue mr-2')
                 | office@don-shina.ru
               a.contacts__item.h5.text-nowrap.mb-3(href="#")
-                +icon('wapp','contacts__icon color-theme-brand mr-2')
+                +icon('wapp','contacts__icon color-theme-blue mr-2')
                 | WhatsApp
               a.contacts__item.h5.text-nowrap.mb-3(href="#")
-                +icon('tg','contacts__icon color-theme-brand mr-2')
+                +icon('tg','contacts__icon color-theme-blue mr-2')
                 | Telegram
               a.contacts__item.align-items-start.h5(href="#")
-                +icon('time','contacts__icon color-theme-brand mr-2')
+                +icon('time','contacts__icon color-theme-blue mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
@@ -151,7 +151,7 @@ block wrapper
 
     form.section.mb-5(action="#")
       .border-bottom.px-lg-5.px-md-4.px-3.mb-3
-        .h2.font-weight-bold.text-center.color-theme-brand.mb-4 Вы можете задать нам вопросы и мы ответим в ближайшее
+        .h2.font-weight-bold.text-center.color-theme-blue.mb-4 Вы можете задать нам вопросы и мы ответим в ближайшее
           br
           | время
         .form.row
@@ -176,6 +176,6 @@ block wrapper
             .h6.col-xl-5.col-md-6.text-center Нажимая “Подписаться” вы принимаете
               br
               | условия&nbsp;
-              a.color-theme-brand(href="#") Политики конфиденциальности
+              a.color-theme-blue(href="#") Политики конфиденциальности
           .d-flex.justify-content-lg-end.justify-content-center.col-xl-3.col-lg-4
             button.button.text-uppercase.px-5(type="submit") отправить
