--- a/src/pug/libs/mixins.pug
+++ b/src/pug/libs/mixins.pug
@@ -20,7 +20,7 @@ mixin radio(radio__index=1, radio__title, radio__checked, radio__name="filter-ra
 
 mixin leftmenu(leftmenu__title, leftmenu__icon, leftmenu__badge, leftmenu__badge_text, leftmenu__badge_extratext=false)
   a.leftmenu__item.d-flex.align-items-center.h4(href="https://don-shina.ru")
-    +icon(leftmenu__icon, 'leftmenu__item-icon h3 color-theme-brand mr-2')
+    +icon(leftmenu__icon, 'leftmenu__item-icon h3 color-theme-blue mr-2')
     span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2!= leftmenu__title
     if (leftmenu__badge_text)
       span.leftmenu__badge.h5.text-nowrap.color-theme-white.px-2(class=leftmenu__badge)!= leftmenu__badge_text
@@ -46,7 +46,7 @@ mixin banner(banner__img, banner__noshadow=false, banner__classmod="card_sm", ba
       .banner.banner_noshadow.overflow-hidden
         +img(banner__img,'img-cover')
         .banner__inner.d-flex.flex-column.align-items-center.justify-content-between.px-3.py-4
-          .banner__title.h1.font-weight-bold.color-theme-brand!= banner__title
+          .banner__title.h1.font-weight-bold.color-theme-blue!= banner__title
           a.button.text-uppercase(href="#") Записаться
     else
       a.card__picture.h-100(href="#")
@@ -137,7 +137,7 @@ mixin card(card__price_old, card__price_new, card__title="Зимние шины 
               if (card__spikes)
                 .icon-marker
                   +icon('spikes','h4')
-          .card__params.flex-grow-1.text-right.color-theme-brand 215 / 55  R16
+          .card__params.flex-grow-1.text-right.color-theme-blue 215 / 55  R16
     .card__body.d-flex.flex-column.justify-content-between.flex-grow-1(class=card__params_offset)
       .card__intro
         a.card__title.d-block.mb-2(href="#" itemprop="url")
@@ -158,7 +158,7 @@ mixin card(card__price_old, card__price_new, card__title="Зимние шины 
                   | ₽
                 .text-sm при сдаче старого
           .d-flex.flex-column.flex-sm-row.align-items-sm-center.justify-content-between.zi-2(class=card__oneclick_offset)
-            .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-sm-1.mb-sm-0.mb-2
+            .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-sm-1.mb-sm-0.mb-2
               input.recalculate__field.d-none(type="number" name="count" value="4")
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -179,7 +179,7 @@ mixin card(card__price_old, card__price_new, card__title="Зимние шины 
                   | ₽
                 .text-sm при сдаче старого
           .d-flex.align-items-center.justify-content-between.zi-2(class=card__oneclick_offset)
-            .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-brand.mr-1
+            .recalculate.d-flex.align-items-center.flex-grow-1.overflow-hidden.bg-theme-blue.mr-1
               input.recalculate__field.d-none(type="number" name="count" value="4")
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
@@ -187,7 +187,7 @@ mixin card(card__price_old, card__price_new, card__title="Зимние шины 
             button.button.text-uppercase(type="button") В корзину
         if (card__oneclick)
           button.card__btn.card__btn_link.w-100.zi-2(type="button")
-            +icon('plane','h4 color-theme-brand d-flex flex-column align-items-center justify-content-center mr-1')
+            +icon('plane','h4 color-theme-blue d-flex flex-column align-items-center justify-content-center mr-1')
             | Купить в один клик
     if (card__params)
       .params
