--- a/src/pug/personal-orders.pug
+++ b/src/pug/personal-orders.pug
@@ -15,7 +15,7 @@ block personal
       .heading__col.h6.mb-2 Статус
     .table-row
       .table-row__header.table-row__header_order.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3
-        .table-row__title.h4.d-block.d-md-none.color-theme-brand.mb-3.order-1 Заказ № 1758767
+        .table-row__title.h4.d-block.d-md-none.color-theme-blue.mb-3.order-1 Заказ № 1758767
         .table-row__col.h5.d-none.d-md-flex.flex-column.justify-content-center.order-md-1 1758767
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-2.order-md-2.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Дата заказа:
@@ -30,24 +30,24 @@ block personal
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-4.order-md-5.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Отслеживание:
           .social.d-flex.align-items-center
-            a.social__item.h2.color-theme-brand.mr-2(href="#")
+            a.social__item.h2.color-theme-blue.mr-2(href="#")
               +icon('wapp')
-            a.social__item.h2.color-theme-brand.mr-2(href="#")
+            a.social__item.h2.color-theme-blue.mr-2(href="#")
               +icon('tg')
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-5.order-md-6.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Статус заказа:
           span.color-theme-success Ожидает отгрузки
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand
+          span.readmore.readmore_centered.d-block.color-theme-blue
             +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
             .heading.heading_order-details.mb-3
               .heading__col
-                .h3.font-weight-bold.color-theme-brand Заказ # 837258628
+                .h3.font-weight-bold.color-theme-blue Заказ # 837258628
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand
+                span.readmore.readmore_centered.d-block.color-theme-blue
                   +icon('readmore-reversed','h3')
             .desclist
               .d-flex.align-items-center.mb-2
@@ -65,7 +65,7 @@ block personal
                 .desclist__title.h5.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Отслеживание:
                 .h5.col-xl-10.col-sm-9
                   .social.d-flex.align-items-center
-                    a.social__item.h2.color-theme-brand.mr-2(href="#")
+                    a.social__item.h2.color-theme-blue.mr-2(href="#")
                       +icon('wapp')
               .d-flex.align-items-center.mb-2
                 .desclist__title.h5.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Доставка:
@@ -104,16 +104,16 @@ block personal
             .row
               .contacts.d-flex.align-items-center.justify-content-lg-between.flex-wrap.col-xl-7
                 a.contacts__item.h5.text-nowrap.mr-4.mr-lg-0.mb-2.mb-sm-0(href="#")
-                  +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2 pointer-events-none')
+                  +icon('tg-filled','contacts__icon h3 color-theme-blue mr-2 pointer-events-none')
                   span.contacts__item-title Следить в Telegram
               .col-xl-5.d-flex.justify-content-xl-end
                 button.button.button_nobg.h5.p-0(type="button")
-                  +icon('trash','button__icon h3 color-theme-brand mr-2 pointer-events-none')
+                  +icon('trash','button__icon h3 color-theme-blue mr-2 pointer-events-none')
                   | Отменить запись
 
     .table-row
       .table-row__header.table-row__header_order.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3
-        .table-row__title.h4.d-block.d-md-none.color-theme-brand.mb-3.order-1 Заказ № 1758767
+        .table-row__title.h4.d-block.d-md-none.color-theme-blue.mb-3.order-1 Заказ № 1758767
         .table-row__col.h5.d-none.d-md-flex.flex-column.justify-content-center.order-md-1 1758767
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-2.order-md-2.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Дата заказа:
@@ -128,29 +128,29 @@ block personal
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-4.order-md-5.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Отслеживание:
           .social.d-flex.align-items-center
-            a.social__item.h2.color-theme-brand.mr-2(href="#")
+            a.social__item.h2.color-theme-blue.mr-2(href="#")
               +icon('tg')
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-5.order-md-6.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Статус заказа:
-          span.color-theme-brand Ожидает обработки
+          span.color-theme-blue Ожидает обработки
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand
+          span.readmore.readmore_centered.d-block.color-theme-blue
             +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
             .heading.heading_order-details.mb-3
               .heading__col
-                .h3.font-weight-bold.color-theme-brand Заказ #
+                .h3.font-weight-bold.color-theme-blue Заказ #
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand
+                span.readmore.readmore_centered.d-block.color-theme-blue
                   +icon('readmore-reversed','h3')
 
   .mb-3
     .h2.font-weight-bold.text-center.mb-4 История заказа
     .table-row
       .table-row__header.table-row__header_order.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3
-        .table-row__title.h4.d-block.d-md-none.color-theme-brand.mb-3.order-1 Заказ № 1758767
+        .table-row__title.h4.d-block.d-md-none.color-theme-blue.mb-3.order-1 Заказ № 1758767
         .table-row__col.h5.d-none.d-md-flex.flex-column.justify-content-center.order-md-1 1758767
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-2.order-md-2.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Дата заказа:
@@ -169,21 +169,21 @@ block personal
           span.table-row__title.d-block.d-md-none Статус заказа:
           | Готово
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand
+          span.readmore.readmore_centered.d-block.color-theme-blue
             +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
             .heading.heading_order-details.mb-3
               .heading__col
-                .h3.font-weight-bold.color-theme-brand Заказ # 837258628
+                .h3.font-weight-bold.color-theme-blue Заказ # 837258628
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand
+                span.readmore.readmore_centered.d-block.color-theme-blue
                   +icon('readmore-reversed','h3')
 
     .table-row
       .table-row__header.table-row__header_order.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3
-        .table-row__title.h4.d-block.d-md-none.color-theme-brand.mb-3.order-1 Заказ № 1758767
+        .table-row__title.h4.d-block.d-md-none.color-theme-blue.mb-3.order-1 Заказ № 1758767
         .table-row__col.h5.d-none.d-md-flex.flex-column.justify-content-center.order-md-1 1758767
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-2.order-md-2.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Дата заказа:
@@ -198,27 +198,27 @@ block personal
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-4.order-md-5.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Отслеживание:
           .social.d-flex.align-items-center
-            a.social__item.h2.color-theme-brand.mr-2(href="#")
+            a.social__item.h2.color-theme-blue.mr-2(href="#")
               +icon('wapp')
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-5.order-md-6.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Статус заказа:
           | Готово
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand
+          span.readmore.readmore_centered.d-block.color-theme-blue
             +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
             .heading.heading_order-details.mb-3
               .heading__col
-                .h3.font-weight-bold.color-theme-brand Заказ # 837258628
+                .h3.font-weight-bold.color-theme-blue Заказ # 837258628
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand
+                span.readmore.readmore_centered.d-block.color-theme-blue
                   +icon('readmore-reversed','h3')
 
     .table-row
       .table-row__header.table-row__header_order.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3
-        .table-row__title.h4.d-block.d-md-none.color-theme-brand.mb-3.order-1 Заказ № 1758767
+        .table-row__title.h4.d-block.d-md-none.color-theme-blue.mb-3.order-1 Заказ № 1758767
         .table-row__col.h5.d-none.d-md-flex.flex-column.justify-content-center.order-md-1 1758767
         .table-row__col.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.order-2.order-md-2.mb-md-0.mb-2
           span.table-row__title.d-block.d-md-none Дата заказа:
@@ -237,20 +237,20 @@ block personal
           span.table-row__title.d-block.d-md-none Статус заказа:
           | Готово
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand
+          span.readmore.readmore_centered.d-block.color-theme-blue
             +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
             .heading.heading_order-details.mb-3
               .heading__col
-                .h3.font-weight-bold.color-theme-brand Заказ # 837258628
+                .h3.font-weight-bold.color-theme-blue Заказ # 837258628
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand
+                span.readmore.readmore_centered.d-block.color-theme-blue
                   +icon('readmore-reversed','h3')
 
   .section.text-center.py-2.mb-5
-    a.readmore.h4.d-flex.align-items-center.justify-content-center.color-theme-brand.pr-0(href="#")
+    a.readmore.h4.d-flex.align-items-center.justify-content-center.color-theme-blue.pr-0(href="#")
       span.mr-1 Показать всю историю заказов
       span.d-block
         +icon('readmore','h3')
