--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -7,7 +7,7 @@ block personal
   .h2.font-weight-bold.text-center.mb-4 #{title}
   .section.py-0.mb-3
     .border-bottom.px-md-4.px-3.py-md-4.py-3
-      .h3.font-weight-bold.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
+      .h3.font-weight-bold.color-theme-blue По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
     a.border-bottom.d-block.px-md-4.px-3.py-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
     a.border-bottom.d-block.px-md-4.px-3.py-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
     a.border-bottom.d-block.px-md-4.px-3.py-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
@@ -21,7 +21,7 @@ block personal
   .h2.font-weight-bold.text-center.mb-4 Результаты подбора по VIN-коду
   .section.py-0.mb-3
     .border-bottom.px-md-4.px-3.py-md-4.py-3
-      .h3.font-weight-bold.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
+      .h3.font-weight-bold.color-theme-blue По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
     .border-bottom.d-flex.align-items-center.justify-content-between.px-md-4.px-3.py-2
       a.d-block.mr-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
       .h3.d-flex
@@ -52,9 +52,9 @@ block personal
   .section.py-0.mb-5
     .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
       button.button.button_nobg.h4.p-0(type="button")
-        +icon('settings','color-theme-brand h3 mr-2')
-        span.color-theme-brand Подобрать по VIN
-      span.section__readmore.readmore.d-block.color-theme-brand
+        +icon('settings','color-theme-blue h3 mr-2')
+        span.color-theme-blue Подобрать по VIN
+      span.section__readmore.readmore.d-block.color-theme-blue
         +icon('readmore','h3')
     form.section__body(action="#")
       .form.border-bottom.px-md-4.px-3.pt-md-4.pt-3
