--- a/src/pug/subcategory-tires-list.pug
+++ b/src/pug/subcategory-tires-list.pug
@@ -138,4 +138,4 @@ block wrapper
         include base/content.pug
         .content__footer
           button.readmore.readmore_btn(type="button")
-            +icon('readmore','h2 color-theme-brand')
+            +icon('readmore','h2 color-theme-blue')
