--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -45,7 +45,7 @@ a {
       content: '';
       border-radius: 50%;
       margin: .5rem .25rem 0 0;
-      background: $color__brand;
+      background: $color__blue;
     }
   }
 }
