--- a/src/scss/tpl/_booking-form.scss
+++ b/src/scss/tpl/_booking-form.scss
@@ -31,7 +31,7 @@
   &:checked {
     & + .booking-form__label {
       color: #fff;
-      background-color: $color__brand;
+      background-color: $color__blue;
     }
   }
 
@@ -53,7 +53,7 @@
   cursor: pointer;
   transition: all .3s ease;
   border-radius: .5rem;
-  color: $color__brand;
+  color: $color__blue;
   background-color: #fff;
   box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.14);
 
