--- a/src/scss/tpl/_dropdown.scss
+++ b/src/scss/tpl/_dropdown.scss
@@ -45,7 +45,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   border-radius: .25rem;
-  color: $color__brand;
+  color: $color__blue;
   background: $color__light;
   transition: all .3s ease;
   box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, .16);
@@ -62,7 +62,7 @@
   }
 
   &:after {
-    @include border(6px 6px 0,$color__brand rgba(0,0,0,0) rgba(0,0,0,0));
+    @include border(6px 6px 0,$color__blue rgba(0,0,0,0) rgba(0,0,0,0));
     content: '';
     position: absolute;
     top: 10px;
@@ -117,14 +117,14 @@
     display: block;
     overflow: hidden;
     text-align: left;
-    color: $color__brand;
+    color: $color__blue;
     background: $color__light;
   }
 
   .selected {
     .text {
       color: #fff;
-      background: $color__brand;
+      background: $color__blue;
 
       &:before {
         @include pos(4px,6px);
