--- a/src/scss/tpl/_swiper.scss
+++ b/src/scss/tpl/_swiper.scss
@@ -58,7 +58,11 @@
   }
 
   &.slides_togglers {
-    .slides__nav {
+    @include media-breakpoint-down(md) {
+      @include px(2rem);
+    }
+
+    & + .slides__nav {
       @include media-breakpoint-up(lg) {
         display: none;
       }
@@ -111,7 +115,7 @@
         }
 
         &.swiper-pagination-bullet-active {
-          background: $color__brand;
+          background: $color__blue;
         }
       }
     }
@@ -141,7 +145,7 @@
       margin: 0;
       position: static;
       box-shadow: none;
-      color: $color__brand;
+      color: $color__blue;
 
       &.swiper-button-disabled {
         @extend %d-flex-wrap;
@@ -166,7 +170,7 @@
   z-index: 3;
   align-items: center;
   justify-content: center;
-  color: $color__brand;
+  color: $color__blue;
   border-radius: 50%;
   transition: all .3s ease;
   background: #fff;
@@ -180,7 +184,7 @@
   &:focus {
     box-shadow: none;
     color: #fff;
-    background: $color__brand;
+    background: $color__blue;
   }
 
   &.slides__btn_prev {
@@ -193,7 +197,8 @@
 
   &.slides__btn_sm {
     @include wh(28px);
-    @include offset(-1.125rem 0 0,.5rem .375rem .5rem .25rem);
+    margin-top: -1.125rem;
+    padding: .5rem .375rem .5rem .25rem;
 
     &.slides__btn_next {
       padding: .5rem .25rem .5rem .375rem;
@@ -213,4 +218,12 @@
   &:hover {
     z-index: 2;
   }
+}
+
+.slides_togglers-prev {
+  margin-top: -.825rem !important;
+}
+
+.slides_togglers-next {
+  margin-top: -.825rem !important;
 }
